Update Collate Folder

--- a/collated/docs/A0139402M.md
+++ b/collated/docs/A0139402M.md
@@ -5,31 +5,31 @@
 ### Storage component
 
 <img align="center" src="images/StorageClassDiagram.png">
-<div align="center">Figure 9: Storage Class Diagram</div><br>
+<div align="center">Figure 10: Storage Class Diagram</div><br>
 
-**API** : [`Storage.java`](../src/main/taskle/storage/Storage.java)
+**API**: [`Storage.java`](../src/main/taskle/storage/Storage.java)
 
 The `Storage` component:
-* Can save `UserPref` objects in json format and read it back.
-* Can save the Task Manager data in xml format and read it back.
+* Can save `UserPref` objects in json format before reading it back.
+* Can save Taskle's data in xml format before reading it back.
 
 ```
 ###### \DeveloperGuide.md
 ``` md
+<br>
 
 ## Appendix C : Non Functional Requirements
 
 1. Should work on Windows 7 or later.
-2. Should work on a desktop without network/Internet connection.
+2. Should work on a desktop without either a network or Internet connection.
 3. Should have minimal mouse-click actions.
 4. Should work stand-alone, not as a plug-in to another software.
 5. Should store data locally into a human editable file.
 6. Should work without requiring an installer. 
 7. Should be able to hold up to 1000 to-do items.
 8. Should come with automated unit tests and open source code.
-9. Should display command results within 100 millisecond.
+9. Should display command results within 100 milliseconds.
 10. Should favor DOS style commands over Unix-style commands.
-
 
 ```
 ###### \DeveloperGuide.md
@@ -38,21 +38,20 @@ The `Storage` component:
 **Product #3: to-doist**<br>
 Strengths:
 
-1. Supports adding of tasks that can be marked as 'done' → Jim is able to mark completed tasks as done
-2. Supports searching of tasks by its name and project → Jim is able to quickly find a task
-3. Adding of tasks is done in a one-shot manner → Jim is able to avoid taking several clicks to add a task
-4. Operates offline and only starts syncing with other devices when there is Internet connection → Jim can access the application even without internet connectivity.
-5. Supports a desktop version → Jim is able to access the application quickly.
-6. Supports adding of tasks with no specific time tagged to it → Jim is able to add tasks that do not require a specific time to be completed.
-7. Allows easy and straightforward postponement of tasks → Jim can easily postpone tasks should the need arise
+1. Supports adding of tasks that can be marked as 'done'. User is able to mark completed tasks as done.
+2. Supports adding of tasks in a one-shot approach. User can avoid taking several clicks to add a task.
+3. Supports adding of tasks with no specific time tagged to it. User is able to add tasks that do not require a specific time to be completed.
+4. Supports searching of tasks by its name and project. User is able to find a task quickly. 
+5. Supports a desktop version. User is able to access the application quickly from his computer.
+6. Operates offline and only starts syncing with other devices when there is Internet connection. User can access the application without internet connectivity.
+7. Allows easy and straightforward postponement of tasks. User can easily postpone tasks should the need arise.
 
+Weaknesses:
 
-Weakness:
-
-1. Does not allow for block scheduling of tasks (e.g. can only schedule tasks at 3pm and not 3 - 5pm) → Jim cannot schedule tasks in block timings
-2. Does not provide a user-friendly way to look for a suitable slot to schedule an item → Jim has to go through all existing tasks to look for an empty slot to schedule a new task
-3. Unable to block multiple slots for tasks with unconfirmed timings → Jim will find it hard to schedule tasks with unconfirmed timings
-4. Syncing of data with the cloud occurs only when there is Internet connectivity → Jim will have to require Internet connectivity if he wants to use the application with all his existing tasks on another computer
+1. Does not allow for block scheduling of tasks (e.g. Tasks can only be scheduled at 3pm, not 3 - 5pm). User cannot schedule tasks in block timings.
+2. Does not provide a user-friendly way to look for a suitable slot to schedule an item. User has to go through all existing tasks to look for an empty slot to schedule a new task.
+3. Does not support blocking of multiple slots for tasks with unconfirmed timings. User will find it hard to schedule tasks with unconfirmed timings.
+4. Syncs data with the cloud only when there is Internet connectivity. User requires Internet connectivity if he wants to use the application with all his existing tasks on another computer.
 
 <br>
 
@@ -61,7 +60,7 @@ Weakness:
 ``` md
 ## Quick Start
 
-0. Ensure you have Java version `1.8.0_60` or later installed in your computer.<br>
+0. Ensure that you have Java version `1.8.0_60` or later installed in your computer.<br>
    > Having any Java 8 version is not enough. <br>
    This application will not work with earlier versions of Java 8.
    
@@ -70,61 +69,63 @@ Weakness:
 2. Copy the file to the folder where you want to use Taskle.
 
 3. Double-click on the file to start the application. The Graphical User Interface (GUI) should appear in a few seconds.
-	
-	> <img src="images/UI/Base.png" align="center">
-	<div align="center">Figure 1: Graphical User Interface of Taskle</div>
+   
+   > <img src="images/UI/Main.png" align="center">
+   <div align="center">Figure 1: GUI of Taskle</div>
 
-4. Type the command in the command box and press <kbd>Enter</kbd> to execute it.
-	> e.g. typing **`help`** and pressing <kbd>Enter</kbd> will open the help window.
+4. Type a command in the command box and press <kbd>Enter</kbd> to execute it.
+   > Example: Typing **`help`** and pressing <kbd>Enter</kbd> will open up the help window.
  
 5. Some commands that you can try:
    * `add` **`Buy Milk`** : Adds a "Buy Milk" task into Taskle.
    * `add` **`Submit Proposal by 7 Nov`** : Adds a "Submit Proposal" task which is to be completed by 7 Nov.
-   * `remove` **`5`** : Removes the task with index 5 from the currently shown list.
+   * `remove` **`5`** : Removes the task with index 5 from the current list.
    * `clear`: Clears all tasks from Taskle.
    * `exit` : Exits from Taskle.
    
-6. Refer to the [Features](#features) section for details of each command.<br>
+6. Refer to the [Features](#features) section for details of each command.
+
+<br>
 
 ```
 ###### \UserGuide.md
 ``` md
-### Finding a Task : `find`
-Finds all tasks in Taskle that contains the keywords and fulfills the status as specified.<br><br>
+### Find Tasks : `find`
+Finds all the tasks in Taskle that match the list of keywords and specified statuses.<br><br>
 
 | Format  
 | :-------- 
 | `find` **`keywords [-status]`** | 
 
 > **Things to Note**
-> * The following statues are available:
->	* **-all**: All tasks in Taskle
->	* **-pending**: Tasks that are still pending.
->	* **-done**: Tasks that are marked as done.
->	* **-overdue**: Tasks that are overdue (applicable for deadlines only.)
-> * All tasks that match the list of keywords and the statuses specified would be displayed.
-> * You must specify at least one keyword when using find.
-> * It is optional to specify the status. If no status is specified, the default
-tasks to be displayed are the pending and overdue ones. 
-> * You may specify more than one status. In that case all tasks that fulfill any of the flags would be displayed. For example:
->	* find meeting task **-pending** **-overdue**
+> * The following statuses are available:
+>  * **-all**: All the tasks in Taskle.
+>  * **-pending**: Pending tasks.
+>  * **-done**: Tasks that have been marked as done.
+>  * **-overdue**: Tasks that are overdue (only applicable to deadlines.)
+> * All the tasks that match the list of keywords and specified statuses will be displayed.
+> * You must specify **at least one keyword** when using find.
+> * It is optional to specify the status. If no status was specified, the default tasks (pending and overdue) will be displayed. 
+> * You may specify more than one status. All tasks that fulfill any of these statuses will be displayed. 
+>  * Example:  "`find` `meeting` `task` **`-pending`** **`-overdue`**"
 
-Examples:
-* `find` **`books`**
+Example:
+* `find` **`project`**
 
 <img src="images/UI/Find.png" align="center">
-<div align="center">Figure 10: Find all Tasks that have "books" as part of the task name</div><br>
+<div align="center">Figure 10: Finds "pending and overdue" tasks that have "project" in their names</div><br>
 
-* `find` **`-pending`**	
-	
-<img src="images/UI/Find Pending.png" align="center">
-<div align="center">Figure 11: Find all pending Tasks</div><br>
+* `find` **`project`** **`-all`**   
+   
+<img src="images/UI/Find_All.png" align="center">
+<div align="center">Figure 11: Finds all tasks that have "project" in their names</div><br>
+
 <br>
 
 ```
 ###### \UserGuide.md
 ``` md
-### Clearing all Tasks: `clear`
+### Clear all Tasks: `clear`
 Clears all tasks from Taskle.<br><br>
 
 | Format  
@@ -132,26 +133,25 @@ Clears all tasks from Taskle.<br><br>
 | `clear` | 
 
 <br>
-<img src="images/UI/Clear.png" align="center">
-<div align="center">Figure 13: Clear all tasks from Taskle</div><br>
-<br>
 
+```
+###### \UserGuide.md
+``` md
 ### View Help: `help`
-Displays a list of available commands.<br>
+Displays a list of available commands.<br><br>
 
 | Format  
 | :-------- 
 | `help` | 
 
-<br>
-
 > **Things to Note**
-> * Help is also shown if you enter an incorrect command. For example: `abcd`.
-> * A list of available commands is shown in a separate window so you can refer to it while using Taskle.
+> * Help is also shown if you enter an incorrect command.
+>  * Example: "abcd"
+> * A list of available commands is shown in a separate window so that you can refer to it while using Taskle.
 
-<br>
 <img src="images/UI/Help.png" align="center">
-<div align="center">Figure 14: View all commands in the help list</div><br>
+<div align="center">Figure 15: Help Window</div><br>
+
 <br>
 
 ### Exit Taskle: `exit`
@@ -161,6 +161,6 @@ Exits and closes Taskle.<br><br>
 | :-------- 
 | `exit` |
  
-<br><br>
+<br>
 
 ```
