--- a/collated/docs/A0141780J.md
+++ b/collated/docs/A0141780J.md
@@ -43,7 +43,7 @@ We are from team W14-C3.
 
 #### [Hamsyari](http://github.com/hamsyari) 
 <img src="images/Hamsyari.jpg" width="150"><br>
-* Role: Code Quality & Documentation <br>  
+* Role: Code Quality & Documentation<br>
 * Components in charge of: Model
 * Aspects/tools in charge of: Code review, documentation content.
 * Features implemented:
@@ -86,31 +86,31 @@ Role: Mentor <br>
 
 #### Prerequisites
 
-1. **JDK `1.8.0_60`**  or later<br>
+1. **JDK `1.8.0_60`**  or later.<br>
 
     > Having any Java 8 version is not enough. <br>
-    This app will not work with earlier versions of Java 8.
-    
-2. **Eclipse** IDE
-3. **e(fx)clipse** plugin for Eclipse (Do the steps 2 onwards given in
-   [this page](http://www.eclipse.org/efxclipse/install.html#for-the-ambitious))
-4. **Buildship Gradle Integration** plugin from the Eclipse Marketplace
+    This application will not work with earlier versions of Java 8.
+2. **Eclipse** IDE.
+3. **e(fx)clipse** plugin for Eclipse (Follow from Step 2 onwards given in
+   [this page](http://www.eclipse.org/efxclipse/install.html#for-the-ambitious)).
+4. **Buildship Gradle Integration** plugin from the Eclipse Marketplace.
 
+<br>
 
-#### Importing the project into Eclipse
+#### Importing the Project into Eclipse
 
-0. Fork this repo, and clone the fork to your computer
-1. Open Eclipse (Note: Ensure you have installed the **e(fx)clipse** and **buildship** plugins as given 
-   in the prerequisites above)
-2. Click `File` > `Import`
-3. Click `Gradle` > `Gradle Project` > `Next` > `Next`
-4. Click `Browse`, then locate the project's directory
-5. Click `Finish`
+0. Fork this repo, and clone it to your computer.
+1. Open Eclipse. (Note: Ensure that you have installed the **e(fx)clipse** and **buildship** plugins as given in the prerequisites above).
+2. Click `File` > `Import`.
+3. Click `Gradle` > `Gradle Project` > `Next` > `Next`.
+4. Click `Browse` and locate the project's directory.
+5. Click `Finish`.
 
-  > * If you are asked whether to 'keep' or 'overwrite' config files, choose to 'keep'.
-  > * Depending on your connection speed and server load, it can even take up to 30 minutes for the set up to finish
-      (This is because Gradle downloads library files from servers during the project set up process)
-  > * If Eclipse auto-changed any settings files during the import process, you can discard those changes.
+> * If you are asked to either 'keep' or 'overwrite' configuration files, 'keep' them.
+> * Depending on your connection speed and server load, it can take up to 30 minutes for the set-up to finish. (This is because Gradle downloads library files from servers during the set-up process of the project).
+> * If Eclipse automatically changed any "settings" files during the import process, you can discard the changes.
+
+<br>
 
 ## Design
 
@@ -118,56 +118,49 @@ Role: Mentor <br>
 
 <img align="center" src="images/Architecture.png">
 <div align="center">Figure 1: Architecture Diagram</div><br>
-The **_Architecture Diagram_** given above explains the high-level design of the App.
-Given below is a quick overview of each component.
 
-`Main` has only one class called [`MainApp`](../src/main/java/taskle/MainApp.java). It is responsible for:
-* At app launch: Initializes the components in the correct sequence, and connect them up with each other.
-* At shut down: Shuts down the components and invoke cleanup method where necessary.
+The **_Architecture Diagram_** given above explains the high-level design of the application. Below is a quick overview of each component.
 
-[**`Commons`**](#common-classes) represents a collection of classes used by multiple other components.
-Two of those classes play important roles at the architecture level.
-* `EventsCentre` : This class (written using [Google's Event Bus library](https://github.com/google/guava/wiki/EventBusExplained))
-  is used by components to communicate with other components using events (i.e. a form of _Event Driven_ design)
-* `LogsCenter` : Used by many classes to write log messages to the App's log file.
+`Main` only has one class called [`MainApp`](../src/main/java/taskle/MainApp.java). It is responsible for:
+* Initializing the components in the correct sequence, and connecting them up with each other, upon the launch of the application.
+* Shutting down the components and invoking cleanup method (where necessary) upon shut down.
 
-The rest of the App consists four components.
-* [**`UI`**](#ui-component) : The UI of the App.
-* [**`Logic`**](#logic-component) : The command executor.
-* [**`Model`**](#model-component) : Holds the data of the App in-memory.
+[**`Commons`**](#common-classes) represents a collection of classes that is used by other multiple components. Two of them play important roles at the architecture level:
+* `EventsCentre`: This class (written using [Google's Event Bus library] (https://github.com/google/guava/wiki/EventBusExplained)) is used by components to communicate with other components through the use of events (i.e. a form of _Event Driven_ design).
+* `LogsCenter`: Used by many classes to write log messages to the application's log file.
+
+The rest of the application consists of four components:
+* [**`UI`**](#ui-component) : Responsible for the User Interface of the application.
+* [**`Logic`**](#logic-component) : Executes user commands.
+* [**`Model`**](#model-component) : Holds the data of the application in-memory.
 * [**`Storage`**](#storage-component) : Reads data from, and writes data to, the hard disk.
 
 Each of the four components:
 * Defines its _API_ in an `interface` with the same name as the Component.
 * Exposes its functionality using a `{Component Name}Manager` class.
 
-For example, the `Logic` component (see the class diagram given below) defines it's API in the `Logic.java`
-interface and exposes its functionality using the `LogicManager.java` class.<br><br>
+For example, the `Logic` component (see the class diagram given below) defines it's API in the `Logic.java` interface and exposes its functionality using the `LogicManager.java` class.
 
 <img align="center" src="images/LogicClassDiagram.png" >
-<div align="center">Figure 2: Logic Class Diagram Example</div><br><br>
+<div align="center">Figure 2: Logic Class Diagram Example</div><br>
 
-The _Sequence Diagram_ below shows how the components interact for the scenario where the user issues the
-command `remove 1`.<br>
+The four components `UI`, `Logic`, `Model`, and `Storage` interact with one another to provide the functionality of the application.
 
-<img align="center" src="images/SDforDeletePerson.png">
-<div align="center">Figure 3: Sequence Diagram for Delete Person</div><br>
+For example, the _Sequence Diagram_ below shows how the components interact in a scenario where the user issues a command `remove 1`.
 
->Note how the `Model` simply raises a `TaskManagerChangedEvent` when the Task Manager data are changed,
- instead of asking the `Storage` to save the updates to the hard disk.
+<img align="center" src="images/SDforRemoveTask.png">
+<div align="center">Figure 3: Sequence Diagram for Remove Task to show Component Interaction</div><br>
 
-<br>
-The diagram below shows how the `EventsCenter` reacts to that event, which eventually results in the updates
-being saved to the hard disk and the status bar of the UI being updated to reflect the 'Last Updated' time. <br><br>
-<img align="center" src="images/SDforDeletePersonEventHandling.png">
+>Note how the `Model` simply raises a `TaskManagerChangedEvent` when Taskle's data is changed, instead of asking the `Storage` to save the updates to the hard disk.
+
+The diagram below shows how the `EventsCenter` reacts to the `TaskManagerChangedEvent`. This results in the updates being saved to the hard disk and the status bar of the UI being updated to reflect the 'Last Updated' time.
+
+<img align="center" src="images/SDforRemoveTaskEventHandling.png">
 <div align="center">Figure 4: Sequence Diagram for Handling of Events</div><br>
 
-> Note how the event is propagated through the `EventsCenter` to the `Storage` and `UI` without `Model` having
-  to be coupled to either of them. This is an example of how this Event Driven approach helps us reduce direct 
-  coupling between components.
+> Note how the event is propagated through the `EventsCenter` to the `Storage` and `UI` without `Model` having to be coupled to either of them. This is an example of how this Event Driven approach helps us reduce direct coupling between components.
 
-<br>
-The sections below give more details of each component.
+The sections below provides more details of each component.
 
 ```
 ###### \DeveloperGuide.md
@@ -178,22 +171,32 @@ The sections below give more details of each component.
 <img align="center" src="images/LogicClassDiagram.png">
 <div align="center">Figure 6: Logic Class Diagram</div><br>
 
-**API** : [`Logic.java`](../src/main/taskle/logic/Logic.java)
+**API**: [`Logic.java`](../src/main/taskle/logic/Logic.java)
+
+The sequence flow of how `Logic` works is as follows.
 
 1. `Logic` uses the `Parser` class to parse the user command.
-2. `History` saves the commands that `LogicManager` executes.
-3. `Parser` uses the CommandParser classes to parse the command.
-4. It returns a `Command` object which is executed by the `LogicManager`.
-5. The command execution can affect the `Model` (e.g. adding a task) and/or raise events.
-6. The result of the command execution is encapsulated as a `CommandResult` object which is passed back to the `Ui`.
+2. `Parser` uses the CommandParser classes to parse the command.
+3. It returns a `Command` object which is executed by the `LogicManager`.
+4. The command execution can affect the `Model` and/or raise events.
+	* Example: Adding a task.
+5. The result of the command execution is encapsulated as a `CommandResult` object which is passed back to the `Ui`.
 
-Given below is the Sequence Diagram for interactions within the `Logic` component for the `execute("remove 1")` API call.<br><br>
-<img align="center" src="images/DeletePersonSdForLogic.png">
-<div align="center">Figure 7: Delete Person Logic Sequence Diagram</div><br>
+Given below is the Sequence Diagram for interactions within the `Logic` component for the `execute("remove 1")` API call.
+
+<img align="center" src="images/RemoveTaskSdForLogic.png">
+<div align="center">Figure 7: Remove Task Logic Sequence Diagram</div><br>
+
+Given below is another Sequence Diagram for interactions within the `Logic` component for the `execute("undo")` API call. Notice the differences between the remove and undo commands.
+
+<img align="center" src="images/UndoCommandSdForLogic.png">
+<div align="center">Figure 8: Undo Command Logic Sequence Diagram</div><br>
 
 ```
 ###### \DeveloperGuide.md
 ``` md
+
+<br>
 
 ## Appendix A : User Stories
 
@@ -241,17 +244,17 @@ Priorities: High (Very likely) - `* * *`, Medium (Likely) - `* *`, Low (Unlikely
 **Product #2: Google Keep**<br>
 Strengths:
 
-1. Supports adding of checklist items → Jim is able to mark as done
-2. Supports time-based reminders → Jim is able to schedule reminders for his tasks deadlines
-3. Supports searching of to-do items by description and types → Jim is able to find a to-do item quickly
-4. Displays to-do items are listed in a user-friendly manner → Jim is able to periodically review his to-do items
-5. Operates even without Internet access → Jim is able to access the application even without Internet connectivity
+1. Supports adding of checklist items. User is able to mark tasks as done.
+2. Supports time-based reminders. User is able to schedule reminders for his deadlines.
+3. Supports searching of tasks by description and types. User is able to find a task quickly.
+4. Displays tasks in a user-friendly manner. User is able to periodically review his tasks.
+5. Operates even without Internet access. User is able to access the application even without Internet connectivity.
 
-Weakness:
+Weaknesses:
 
-1. Requires a few clicks to add a tasks followed by setting reminders → Jim's one-shot preference is not met
-2. Only supports reminders, does not allow Jim to block out slots for items without specific times.
-3. Does not support calendar-centric operations → Jim is not able to schedule tasks with specific start and end dates.
+1. Does not support calendar-centric operations. User is not able to schedule tasks with specific start and end dates.
+2. Requires a few clicks to add tasks followed by setting reminders. User’s one-shot preference is not met.
+3. Supports reminders only. User is not allowed to block out slots for tasks without specific times.
 
 <br>
 
@@ -260,7 +263,7 @@ Weakness:
 ``` md
 ## Features
 
-Taskle makes it elegantly simple to manage your tasks. All of its features require only a single line of command, making it a hassle-free experience to keep track of your tasks!
+Taskle makes managing your tasks both simple and elegant as all of its features can be accessed with a single line of command!
 
 > **Note that the following conventions are used for all command formats:**
 > * **`BOLDED`** words are parameters.
@@ -270,30 +273,31 @@ Taskle makes it elegantly simple to manage your tasks. All of its features requi
 <br>
 
 ### Add a Task / Event: `add`
-   * Adds a task / event into Taskle (with its respective deadline or end-date.)
-   * A reminder time can be set for tasks / events.
-   * The time parameter is optional.
+Adds a task / event into Taskle (with its respective deadline or start-date and end-date.)<br><br>
 
-| Format  
-| :-------- 
-| `add `**`task_name`**` [remind `**`date time`**`]` | 
-| `add `**`deadline_name`**` by `**`date`**` [`**`time`**`] [remind `**`date time`**`]` |
-| `add `**`event_name`**` from `**`date`**`[`**`time`**`] to `**`date`**` [`**`time`**`] [remind `**`date time`**`]`
+| Format  |
+|:--------|
+| `add` **`task_name`** [**`remind` `date time`**] |
+| `add` **`task_name`** `by` **`date`** [**`time`**] [**`remind` `date time`**] |
+| `add` **`task_name`** `from` **`date`** [**`time`**] `to` **`date`** [**`time`**] [**`remind` `date time`**] |
 
-> **`Note`**
-> * You may enter the data and time in any format that you desire, and Taskle will still be able to recognise it.
-> * Only the words after the last **by** or **from** in your input will be taken as the date and time. This allows you to continue using **by** and **from** as part of your task name as long as you enter the date and times last. For example:
-> 	* "add **Gardens by the Bay** from **9am to 9pm today**" adds a task with the name "Gardens by the Bay" with the date and time to be set to "9am to 9pm today".
-
+> **Things to Note**
+> * You may enter the date and time in any format that you desire, and Taskle will still be able to recognise it.
+>  * Example: "add Do Homework by **tmr**" adds a task with the name "Do Homework" with the deadline to be set to tomorrow (tmr is recognised as tomorrow).
+> * Only the words after the last **by** or **from** in your input will be accepted as the date and time. This allows you to continue using **by** and **from** as part of your task name as long as you enter the date and times last.
+>  * Example: "add Gardens by the Bay **from** 9am to 9pm today" adds a task with the name "Gardens by the Bay" with the date and time to be set to "today, 9am to 9pm".
+> * Should the entered name be too long, it will appear truncated with ellipses on the application. However, you can still view the full name by clicking and holding down your mouse button. 
+> * A reminder time can be set for your tasks / events.
+> * The time parameter is optional.
 
 Examples:
-* `add `**`Pay Phone Bills`**
-* `add `**`Do CS2101 Assignment`**` by `**`12 Oct`**
-* `add `**`Business Trip`**` from `**`4 Oct`**` to `**`5 Oct`**` remind `**`3 Oct 2pm`**
+* `add` **`Pay Phone Bills`**
+* `add` **`Do CS2101 Assignment`** `by` **`12 Oct`**
+* `add` **`Business Trip`** `from` **`4 Oct`** `to` **`5 Oct`** `remind` **`3 Oct 2pm`**
 
 <img align="center" src="images/UI/Add.png" >
-<div align="center">Figure 2: Adding Pay Phone Bills Task into Taskle</div>
-	
+<div align="center">Figure 2: Adds a task with the name "Pay Phone Bills" into Taskle</div><br>
+   
 <br>
 
 ```
@@ -302,35 +306,55 @@ Examples:
 ## FAQ
 
 **Q**: How do I transfer my data to another computer?<br>
-**A**: Install the application in the other computer and overwrite the empty data file it creates with the file created in your previous Taskle folder.
+**A**: You can install Taskle in the other computer and overwrite its empty data file with the file that was created in your previous Taskle folder. You can also use Taskle's save and open features to transfer your data.
+
+**Q**: I can't seem to key in a date!<br>
+**A**: You may have forgotten to include the keywords **from** or **by**!
+
+**Q**: My task name is too long and I cannot view it on Taskle!<br>
+**A**: You can click and hold your mouse button down to view the whole task name.
+
+**Q**: The reminder notification is getting too annoying; can I increase the interval at which it pops up?<br>
+**A**: We have fixed the interval for the pop up at 1 minute. However, if you find it too annoying, you can dismiss the reminders (which removes them from Taskle) by right-clicking the icon in the bottom right tray.
+
+**Q**: Am I able the customize the colours on Taskle?<br>
+**A**: No, the colour scheme is fixed.
+
+**Q**: How are you able to intelligently recognize the date and time in any format?<br>
+**A**: Thankfully, there are third party libraries that provide this sort of functionality for free! The one we used for Taskle is called "Natty".
+
+<br>
        
 ## Command Summary
 
-The table below shows the overall list of commands used in the application.<br>
-Note the following conventions used:
-* **`BOLDED`** words are parameters.
-* Items in `[SQUARE_BRACKETS]` are optional.
-* The order of parameters is fixed.
+The table below shows the overall list of commands used in the application.
 
-Command `(Shortcut)` | Format  
-:-------- | :-------- 
-Add `a` | `add `**`task_name`**` [remind `**`date time`**`]`
- 		| `add `**`deadline_name`**` by `**`date`**` [`**`time`**`] [remind `**`date time`**`]` 
- 		| `add `**`event_name`**` on ` **`date`**` [`**`time`**`] [remind `**`date time`**`]`|
- 		|`add ` **`event_name`**` from `**`date`** ` [`**`time`**`] to `**`date`**` [`**`time`**`] [remind `**`date time`**`]`  
+> **Note that the following conventions are used for all command formats:**
+> * **`BOLDED`** words are parameters.
+> * Items in `[SQUARE_BRACKETS]` are optional.
+> * The order of parameters is fixed.
 
-Edit Description `rn` | `rename `**`task_number new_task_name`**
-Reschedule `rs` | `reschedule `**`task_number` `date`**` [`**`time`**`] to ` **`date`**`[`**`time`**`] [remind `**`date time`**`]`
-Set Reminder `rmd` | `remind `**`task_number date time`**
-Remove `rm` | `remove `**`task_number`**
-Find `f` | `find `**`search_query`**` [`**`-status`**`]`
-List `l` | `list [`**`-status`**`]`
-Mark as Done `d` | `done `**`task_number`**
-Undo `u` | `undo`
-Redo `r` | `redo`
-Clear | `clear`
-Change Directory `cd` | `changedirectory`
-Open Data File `of` | `open file`
-Help `h` | `help`
-Exit | `exit`
+<br>
+
+|Command   | Shortcut | Format  |
+|:-------- |:---------|:--------|
+|Add       | a        | `add` **`task_name`** [`remind` **`date time`**] |
+|          |          | `add` **`task_name`** `by` **`date`** [**`time`**] [`remind` **`date time`**] |
+|          |          | `add` **`task_name`** `from` **`date`** [**`time`**] `to` **`date`** [**`time`**] [`remind` **`date time`**] |
+|Rename    | rn       | `rename` **`task_number`** **`new_task_name`** |
+|Reschedule| rs       | `reschedule` **`task_number`** **`date`** [**`time`**] [**`to` `date time`**]  [`remind` **`date time`**] |
+|Reschedule|          | `reschedule` **`task_number`** `clear`|
+|Remind    | rmd      | `remind` **`task_number`** **`date`** [**`time`**] |
+|Remind    |          | `remind` **`task_number`** `clear`|
+|Remove    | rm       | `remove` **`task_number`** |
+|Find      | f        | `find` **`keywords [-status]`** |
+|List      |l         | `list` **`[-status]`** |
+|Mark as Done| d      | `done` **`task_number`** |
+|Undo      |u         | `undo` |
+|Redo      |r         | `redo` |
+|Clear     |          | `clear`|
+|Change Directory | s | `save` |
+|Open Data File   | o | `open` |
+|View Help |h         | `help` |
+|Exit      |          | `exit` |
 ```
