--- a/collated/test/A0125509H.md
+++ b/collated/test/A0125509H.md
@@ -11,7 +11,7 @@ public class DoneCommandTest extends TaskManagerGuiTest {
      * @throws IllegalValueException
      */
     @Test
-    public void done_existing_task() throws IllegalValueException {
+    public void done_existing_task() {
         String index = "1";
         String command = buildCommand(index);
         assertDoneResultSuccess(command, index);
@@ -22,7 +22,7 @@ public class DoneCommandTest extends TaskManagerGuiTest {
      */
     @Test
     public void done_inexistent_task() {
-        String commandInvalidIntegerIndex = buildCommand("10");
+        String commandInvalidIntegerIndex = buildCommand("99");
         assertDoneInvalidIndex(commandInvalidIntegerIndex);
 
         String commandInvalidStringIndex = buildCommand("ABC");
@@ -61,6 +61,243 @@ public class DoneCommandTest extends TaskManagerGuiTest {
     private void assertDoneInvalidCommand(String command) {
         commandBox.runCommand(command);
         assertUnsuccessfulMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
+    }
+}
+```
+###### \java\guitests\RemoveCommandTest.java
+``` java
+    @Test
+    public void removeCommand_removeFirstTask_successfulRemove() {
+        // removes the first in the list
+        Task[] currentList = td.getTypicalTasks();
+        int targetIndex = 1;
+        assertRemoveSuccess(targetIndex, currentList);
+    }
+    
+    @Test
+    public void removeCommand_removeLastTask_successfulRemove() {
+        // removes the last in the list
+        Task[] currentList = td.getTypicalTasks();
+        int targetIndex = currentList.length;
+        assertRemoveSuccess(targetIndex, currentList);
+    }
+    
+    @Test
+    public void removeCommand_invalidIndex_showUnsuccessfulMsg() {
+        //  invalid index
+        Task[] currentList = td.getTypicalTasks();
+        int targetIndex = currentList.length + 1;
+        commandBox.runCommand("remove " + targetIndex);
+        assertUnsuccessfulMessage("The task index provided is invalid");
+    }
+    
+    @Test
+    public void removeCommand_multipleRemove_successfulRemove() {
+        //remove multiple
+        Task[] currentList = td.getTypicalTasks();
+        String targetIndexString = "2 4 1";
+        assertRemoveSuccessString(targetIndexString, currentList);
+    }
+    
+    @Test
+    public void removeCommand_removeFromMiddle_successfulRemove() {
+        // middle index
+        Task[] currentList = td.getTypicalTasks();
+        int targetIndex = currentList.length/2;
+        assertRemoveSuccess(targetIndex, currentList);
+    }
+    
+    @Test
+    public void removeCommand_multipleRemoveWithInvalidIndex_showUnsuccessfulMsg() {
+        //remove multiple
+        Task[] currentList = td.getTypicalTasks();
+        String targetIndexString = "2 4 1 index";
+        //assertRemoveSuccessString(targetIndexString, currentList);
+        commandBox.runCommand("remove " + targetIndexString);
+        assertUnsuccessfulMessage("Invalid command format!");
+    }
+
+    /**
+     * Runs the remove command to delete the task at specified index and confirms the result is correct.
+     * 
+     * @param targetIndexOneIndexed e.g. to delete the first task in the list, 1 should be given as the target index.
+     * @param currentList A copy of the current list of tasks (before deletion).
+     */
+    private void assertRemoveSuccess(int targetIndexOneIndexed, final Task[] currentList) {
+        Task[] expectedRemainder = TestUtil.removeTaskFromList(currentList, targetIndexOneIndexed);
+
+        commandBox.runCommand("remove " + targetIndexOneIndexed);
+
+        //confirm the list now contains all previous tasks except the deleted task
+        assertTrue(taskListPanel.isListMatching(expectedRemainder));
+
+        //confirm the result message is correct
+        assertSuccessfulMessage(String.format(MESSAGE_DELETE_TASK_SUCCESS, 
+                                              targetIndexOneIndexed));
+    }
+    
+    private void assertRemoveSuccessString(String targetIndexOneIndexedString, final Task[] currentList) {
+        ArrayList<Integer> targetIndexOneIndexed = new ArrayList<Integer>();
+        Task[] expectedRemainder = Arrays.copyOf(
+                currentList, currentList.length);
+        
+        String argsTrim = targetIndexOneIndexedString.trim();
+        String[] s = argsTrim.split(" ");
+        String compareString = "";
+        for (int i = 0; i < s.length; i++) {
+            targetIndexOneIndexed.add(Integer.parseInt(s[i]));
+            
+            if(i != (s.length - 1)) { 
+                compareString = compareString 
+                        + targetIndexOneIndexed.get(i) + ", ";
+            } else { 
+                compareString = compareString + targetIndexOneIndexed.get(i);
+            }
+        }
+        Collections.sort(targetIndexOneIndexed);
+        Collections.reverse(targetIndexOneIndexed);
+        
+        commandBox.runCommand("remove " + targetIndexOneIndexedString);
+        
+        for(int j = 0; j < s.length; j++) {
+            expectedRemainder = TestUtil.removeTaskFromList(expectedRemainder, targetIndexOneIndexed.get(j));
+        }
+        
+        assertTrue(taskListPanel.isListMatching(expectedRemainder));
+        assertSuccessfulMessage(String.format(MESSAGE_DELETE_TASK_SUCCESS, 
+                                              compareString));
+    }
+}
+```
+###### \java\taskle\logic\LogicManagerTest.java
+``` java
+    @Test
+    public void executeDoneCommand_doneAvailableIndex_completesCorrectTask() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        Task task1 = helper.generateTaskWithName("Get fruits from supermarket");
+        Task task2 = helper.generateTaskWithName("Get David a burger");
+
+        List<Task> allTasks = helper.generateTaskList(task1, task2);
+        List<Task> expectedTasks = helper.generateTaskList(task1.copy(), 
+                task2.copy());
+        List<Task> expectedList = helper.generateTaskList(task1);
+        TaskManager expectedTM = helper.generateTaskManager(expectedTasks);
+        expectedTM.doneTask(0, true);
+        helper.addToModel(model, allTasks);
+
+        assertCommandBehavior("done 1",
+                DoneCommand.MESSAGE_DONE_TASK_SUCCESS,
+                expectedTM,
+                expectedList);
+        
+    }
+    
+    @Test
+    public void executeDoneCommand_doneInvalidIndex_showsErrorMessage() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        Task task1 = helper.generateTaskWithName("Get fruits from supermarket");
+        Task task2 = helper.generateTaskWithName("Get David a burger");
+
+        List<Task> allTasks = helper.generateTaskList(task1, task2);
+        TaskManager expectedTM = helper.generateTaskManager(allTasks);
+        helper.addToModel(model, allTasks);
+
+        assertCommandBehavior("done 2016",
+                MESSAGE_INVALID_TASK_DISPLAYED_INDEX,
+                expectedTM,
+                allTasks);
+        
+    }
+    
+```
+###### \java\taskle\model\UnmodifiableObservableListTest.java
+``` java
+public class UnmodifiableObservableListTest {
+
+    @Rule
+    public ExpectedException thrown = ExpectedException.none();
+
+    List<Integer> backing;
+    UnmodifiableObservableList<Integer> list;
+
+    @Before
+    public void setup() {
+        backing = new ArrayList<>();
+        backing.add(10);
+        list = new UnmodifiableObservableList<>(FXCollections.observableList(backing));
+    }
+
+    @Test
+    public void transformationListGenerators_correctBackingList() {
+        assertSame(list.sorted().getSource(), list);
+        assertSame(list.filtered(i -> true).getSource(), list);
+    }
+
+    @Test
+    public void testFunctionality() {
+        assertSame(list.equals(backing), true);
+        assertSame(list.hashCode(), backing.hashCode());
+        assertSame(list.indexOf(10), 0);
+        assertSame(list.lastIndexOf(10), 0);
+        assertSame(list.contains(10), backing.contains(10));
+        assertSame(list.containsAll(new ArrayList<Integer>()), backing.containsAll(new ArrayList<Integer>()));
+        assertSame(Arrays.equals(list.toArray(), backing.toArray()), true);
+        assertSame(Arrays.equals(list.toArray(new Integer[]{}), backing.toArray(new Integer[]{})), true);
+        
+        
+        ListIterator<Integer> iter = list.listIterator();
+        ListIterator<? extends Integer> backIter = backing.listIterator();
+        assertSame(iter.hasPrevious(), backIter.hasPrevious());
+        assertSame(iter.next(), backIter.next());
+        assertSame(iter.previous(), backIter.previous());
+        assertSame(iter.nextIndex(), backIter.nextIndex());
+        assertSame(iter.previousIndex(), backIter.previousIndex());
+    }
+    
+    @Test
+    public void mutatingMethods_disabled() {
+
+        final Class<UnsupportedOperationException> ex = UnsupportedOperationException.class;
+
+        assertThrows(ex, () -> list.add(0, 2));
+        assertThrows(ex, () -> list.add(3));
+
+        assertThrows(ex, () -> list.addAll(2, 1));
+        assertThrows(ex, () -> list.addAll(backing));
+        assertThrows(ex, () -> list.addAll(0, backing));
+
+        assertThrows(ex, () -> list.set(0, 2));
+
+        assertThrows(ex, () -> list.setAll(new ArrayList<Number>()));
+        assertThrows(ex, () -> list.setAll(1, 2));
+        assertThrows(ex, () -> list.setAll(new ArrayList<Double>()));
+
+        assertThrows(ex, () -> list.remove(0, 1));
+        assertThrows(ex, () -> list.remove(null));
+        assertThrows(ex, () -> list.remove(0));
+
+        assertThrows(ex, () -> list.removeAll(backing));
+        assertThrows(ex, () -> list.removeAll(1, 2));
+
+        assertThrows(ex, () -> list.retainAll(backing));
+        assertThrows(ex, () -> list.retainAll(1, 2));
+
+        assertThrows(ex, () -> list.replaceAll(i -> 1));
+
+        assertThrows(ex, () -> list.sort(Comparator.naturalOrder()));
+
+        assertThrows(ex, () -> list.clear());
+
+        final Iterator<Integer> iter = list.iterator();
+        iter.next();
+        assertThrows(ex, iter::remove);
+
+        final ListIterator<Integer> liter = list.listIterator();
+        liter.next();
+        assertThrows(ex, liter::remove);
+        assertThrows(ex, () -> liter.add(5));
+        assertThrows(ex, () -> liter.set(3));
+        assertThrows(ex, () -> list.removeIf(i -> true));
     }
 }
 ```
