--- a/collated/test/A0140047U.md
+++ b/collated/test/A0140047U.md
@@ -4,24 +4,66 @@
 //Tests for change in directory
 public class ChangeDirectoryCommandTest extends TaskManagerGuiTest {
     
-    private static final String TEST_DATA_FOLDER = "src" + File.separator + "test" +
-            File.separator + "data" + File.separator + "StorageDirectoryUtilTest";
+    private static final String TEST_DATA_FOLDER = FileUtil.getPath("src/test/data/StorageDirectoryUtilTest/");
+    private static final String TEST_DATA_TEMP_FOLDER = FileUtil.getPath("src/test/data/StorageDirectoryUtilTest/temp");
+    private static final String TEST_DATA_FILE_VALID_NAME = "ValidFormatTaskManager.xml";
+    private static final String TEST_DATA_FILE_EXISTING_NAME = "ExistingTaskManager.xml";
+    
+    private static final String INVALID_CONFIG = FileUtil.getPath("src/test/data/ConfigUtilTest/NotJasonFormatConfig.json");
+    private static final String TEMP_CONFIG = "temp.json";
     
     private Config config;
+    private File tempDirectory;
     private String taskManagerDirectory;
+    private String taskManagerFileName;
     
     //Change to an invalid directory
     @Test
     public void changeDirectory_invalidDirectory_incorrectCommand() {
-        String command = ChangeDirectoryCommand.COMMAND_WORD + " /i/n/v/a/l/i/d";
-        assertChangeDirectoryInvalidDirectory(command);
+        String command = ChangeDirectoryCommand.COMMAND_WORD + " invalid";
+        assertChangeDirectoryIncorrectCommand(command);
+    }
+    
+    //Change to the same directory
+    @Test
+    public void changeDirectory_sameDirectory_errorMessage() {
+        String command = ChangeDirectoryCommand.COMMAND_WORD + " " + TEST_DATA_FOLDER;
+        assertChangeDirectoryConflict(command, ChangeDirectoryCommand.MESSAGE_SAME_DIRECTORY);
+    }
+    
+    //Change to a directory with existing file name
+    @Test
+    public void changeDirectory_existingFile_errorMessage() throws DataConversionException, IOException {
+        Config config = ConfigUtil.readConfig(Config.DEFAULT_CONFIG_FILE).get();
+        config.setTaskManagerFileName(TEST_DATA_FILE_EXISTING_NAME);
+        ConfigUtil.saveConfig(config, Config.DEFAULT_CONFIG_FILE);
+        
+        String command = ChangeDirectoryCommand.COMMAND_WORD + " " + TEST_DATA_TEMP_FOLDER;
+        assertChangeDirectoryConflict(command, ChangeDirectoryCommand.MESSAGE_FILE_CONFLICT);
+        
+        config.setTaskManagerFileName(TEST_DATA_FILE_VALID_NAME);
+        ConfigUtil.saveConfig(config, Config.DEFAULT_CONFIG_FILE);
     }
     
     //Change to a valid directory
     @Test
-    public void changeDirectory_validFormat_directoryChanged() throws DataConversionException, IOException {
-        String command = ChangeDirectoryCommand.COMMAND_WORD + " " + TEST_DATA_FOLDER;
+    public void changeDirectory_validFormat_directoryChanged() throws DataConversionException, IOException {   
+        String command = ChangeDirectoryCommand.COMMAND_WORD + " " + TEST_DATA_TEMP_FOLDER;
         assertChangeDirectorySuccess(command);
+    }
+    
+    //Change a directory while the config file is invalid
+    @Test
+    public void openFile_invalidConfig_dataConversionException() {
+        new File(Config.DEFAULT_CONFIG_FILE).renameTo(new File(TEMP_CONFIG));
+        new File(INVALID_CONFIG).renameTo(new File(Config.DEFAULT_CONFIG_FILE));
+        
+        String command = ChangeDirectoryCommand.COMMAND_WORD + " " + TEST_DATA_TEMP_FOLDER;
+        commandBox.runCommand(command);
+        assertUnsuccessfulMessage(Messages.MESSAGE_CONFIG_ERROR);
+        
+        new File(Config.DEFAULT_CONFIG_FILE).renameTo(new File(INVALID_CONFIG));
+        new File(TEMP_CONFIG).renameTo(new File(Config.DEFAULT_CONFIG_FILE));
     }
     
     private void assertChangeDirectorySuccess(String command) throws DataConversionException, IOException {
@@ -31,21 +73,40 @@ public class ChangeDirectoryCommandTest extends TaskManagerGuiTest {
         restoreStorage();
     }
     
-    private void assertChangeDirectoryInvalidDirectory(String command) {
+    private void assertChangeDirectoryIncorrectCommand(String command) {
         commandBox.runCommand(command);
         assertUnsuccessfulMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, ChangeDirectoryCommand.MESSAGE_USAGE));
     }
     
-    //Stores original taskManager directory and file name
-    @Before
-    public void setUp() throws DataConversionException {
-        config = ConfigUtil.readConfig(Config.DEFAULT_CONFIG_FILE).get();
-        taskManagerDirectory = config.getTaskManagerFileDirectory();
+    private void assertChangeDirectoryConflict(String command, String message) {
+        commandBox.runCommand(command);
+        assertUnsuccessfulMessage(message);
     }
     
-    //Restores original taskManager directory
+    //Stores original taskManager directory and file name
+    @Before
+    public void setUp() throws DataConversionException, IOException {
+        config = ConfigUtil.readConfig(Config.DEFAULT_CONFIG_FILE).get();
+        taskManagerDirectory = config.getTaskManagerFileDirectory();
+        taskManagerFileName = config.getTaskManagerFileName();
+        
+        tempDirectory = new File(TEST_DATA_FOLDER);
+        config.setTaskManagerFileDirectory(tempDirectory.getAbsolutePath());
+        config.setTaskManagerFileName(TEST_DATA_FILE_VALID_NAME);
+        ConfigUtil.saveConfig(config, Config.DEFAULT_CONFIG_FILE);
+    }
+    
+    //Restores original taskManager directory and file name
+    @After
+    public void tearDown() throws IOException {
+        config.setTaskManagerFileDirectory(taskManagerDirectory);
+        config.setTaskManagerFileName(taskManagerFileName);
+        ConfigUtil.saveConfig(config, Config.DEFAULT_CONFIG_FILE);
+    }
+    
+    //Undo change in taskManager directory
     public void restoreStorage() throws IOException {
-        commandBox.runCommand(ChangeDirectoryCommand.COMMAND_WORD + " " + taskManagerDirectory);
+        commandBox.runCommand(UndoCommand.COMMAND_WORD);
     }
 }
 ```
@@ -56,6 +117,9 @@ public class OpenFileCommandTest extends TaskManagerGuiTest {
     
     private static final String TEST_DATA_FOLDER = "src" + File.separator + "test" +
             File.separator + "data" + File.separator + "StorageDirectoryUtilTest" + File.separator;
+    
+    private static final String INVALID_CONFIG = FileUtil.getPath("src/test/data/ConfigUtilTest/NotJasonFormatConfig.json");
+    private static final String TEMP_CONFIG = "temp.json";
     
     private static final String INEXISTENT_FILE = " Inexistent.xml";
     private static final String INVALID_FILE = "InvalidFormatTaskManager.xml";
@@ -79,11 +143,32 @@ public class OpenFileCommandTest extends TaskManagerGuiTest {
         assertOpenFileInvalidFile(command);
     }
     
+    //Open the same file
+    @Test
+    public void openFile_sameFile_messageShown() {
+        String command = OpenFileCommand.COMMAND_WORD + " " + TEST_DATA_FOLDER + VALID_FILE;
+        assertOpenSameFile(command);
+    }
+    
     //Open a valid file
     @Test
     public void openFile_validFormat_FileOpened() throws DataConversionException {
         String command = OpenFileCommand.COMMAND_WORD + " " + TEST_DATA_FOLDER + VALID_FILE;
         assertOpenFileSuccess(command);
+    }
+    
+    //Open a file while the config file is invalid
+    @Test
+    public void openFile_invalidConfig_dataConversionException() {
+        new File(Config.DEFAULT_CONFIG_FILE).renameTo(new File(TEMP_CONFIG));
+        new File(INVALID_CONFIG).renameTo(new File(Config.DEFAULT_CONFIG_FILE));
+        
+        String command = OpenFileCommand.COMMAND_WORD + " " + TEST_DATA_FOLDER + VALID_FILE;
+        commandBox.runCommand(command);
+        assertUnsuccessfulMessage(Messages.MESSAGE_CONFIG_ERROR);
+        
+        new File(Config.DEFAULT_CONFIG_FILE).renameTo(new File(INVALID_CONFIG));
+        new File(TEMP_CONFIG).renameTo(new File(Config.DEFAULT_CONFIG_FILE));
     }
     
     private void assertOpenFileSuccess(String command) throws DataConversionException {
@@ -100,7 +185,13 @@ public class OpenFileCommandTest extends TaskManagerGuiTest {
     
     private void assertOpenFileInvalidFile(String command) {
         commandBox.runCommand(command);
-        assertUnsuccessfulMessage(OpenFileCommand.MESSAGE_FAILURE);
+        assertUnsuccessfulMessage(OpenFileCommand.MESSAGE_INVALID_FILE_FORMAT);
+    }
+    
+    private void assertOpenSameFile(String command) {
+        commandBox.runCommand(command);
+        commandBox.runCommand(command);
+        assertUnsuccessfulMessage(OpenFileCommand.MESSAGE_SAME_FILE);
     }
     
     //Stores original taskManager directory and file name
@@ -124,42 +215,61 @@ public class OpenFileCommandTest extends TaskManagerGuiTest {
 ``` java
 public class RedoCommandTest extends TaskManagerGuiTest {
     
-    private static String TEST_DATA_FOLDER = FileUtil.getPath("./src/test/data/StorageDirectoryUtilTest/");
-    private static String TEST_DATA_FILE = TEST_DATA_FOLDER + "ValidFormatTaskManager.xml";
+    private static String TEST_DATA_FOLDER = FileUtil.getPath("src/test/data/StorageDirectoryUtilTest/");
+    private static String TEST_DATA_FOLDER_TEMP = FileUtil.getPath("src/test/data/StorageDirectoryUtilTest/temp");
+    private static String TEST_DATA_FILE_NAME = "ValidFormatTaskManager.xml";
+    private static String TEST_DATA_FILE = TEST_DATA_FOLDER + TEST_DATA_FILE_NAME;
+    private static final String INVALID_CONFIG = FileUtil.getPath("src/test/data/ConfigUtilTest/NotJasonFormatConfig.json");
+    private static final String TEMP_CONFIG = "temp.json";
     
     private Config config;
     private String taskManagerDirectory;
     private String taskManagerFileName;
     
+    //Redo when no action has been undone
     @Test
-    public void redo() {
+    public void redo_emptyHistory_messageDisplayed() {
+        StorageUtil.clearHistory();
+        commandBox.runCommand(RedoCommand.COMMAND_WORD);
+        assertUnsuccessfulMessage(RedoCommand.MESSAGE_NOTHING_TO_REDO);
+    }
+    
+    //Redo after undo of mutating command    
+    @Test
+    public void redo_afterUndoCommand_undoRestored() {
         Task[] currentList = td.getTypicalTasks();
-        
-        //Redo when no action has been undone
-        assertRedoSuccess(RedoCommand.MESSAGE_NOTHING_TO_REDO, currentList);
-        
-        //Redo after undo of mutating command
         commandBox.runCommand(AddCommand.COMMAND_WORD + " " + td.helpFriend.getName());
         currentList = TestUtil.addTasksToList(currentList, td.helpFriend);
         commandBox.runCommand(UndoCommand.COMMAND_WORD);
         assertRedoSuccess(RedoCommand.MESSAGE_SUCCESS, currentList);
-        
-        //Redo after mutating command, should show "Nothing to Redo" message
+    }
+    
+    //Redo after mutating command, should show "Nothing to Redo" message
+    @Test
+    public void redo_afterMutatingCommand_messageDisplayed() {
+        Task[] currentList = td.getTypicalTasks();
         commandBox.runCommand(RemoveCommand.COMMAND_WORD + " 1");
         currentList = TestUtil.removeTaskFromList(currentList, 1);
-        assertRedoSuccess(RedoCommand.MESSAGE_NOTHING_TO_REDO, currentList);
-        
-        //Redo after undo of storage directory change
+        commandBox.runCommand(RedoCommand.COMMAND_WORD);
+        assertUnsuccessfulMessage(RedoCommand.MESSAGE_NOTHING_TO_REDO);
+    }
+    
+    //Redo after undo of storage directory change
+    @Test
+    public void redo_changeDirectory_directoryChanged() {
         try {
-            commandBox.runCommand(ChangeDirectoryCommand.COMMAND_WORD + " " + TEST_DATA_FOLDER);
+            commandBox.runCommand(ChangeDirectoryCommand.COMMAND_WORD + " " + TEST_DATA_FOLDER_TEMP);
             commandBox.runCommand(UndoCommand.COMMAND_WORD);
             assertRedoDirectorySuccess(RedoCommand.MESSAGE_SUCCESS);
             restoreStorage();
         } catch (DataConversionException | IOException e) {
             e.printStackTrace();
-        }
-        
-        //Redo after undo of file storage change
+        }  
+    }
+    
+    //Redo after undo of file storage change
+    @Test
+    public void redo_openFile_fileReOpened() {
         try {
             commandBox.runCommand(OpenFileCommand.COMMAND_WORD + " " + TEST_DATA_FILE);
             commandBox.runCommand(UndoCommand.COMMAND_WORD);
@@ -167,6 +277,22 @@ public class RedoCommandTest extends TaskManagerGuiTest {
         } catch (DataConversionException e) {
             e.printStackTrace();
         }
+    }
+    
+    //Redo storage operation when config file is invalid
+    @Test
+    public void redo_invalidConfig_dataConversionException() {
+        commandBox.runCommand(OpenFileCommand.COMMAND_WORD + " " + TEST_DATA_FILE);
+        commandBox.runCommand(UndoCommand.COMMAND_WORD);
+        
+        new File(Config.DEFAULT_CONFIG_FILE).renameTo(new File(TEMP_CONFIG));
+        new File(INVALID_CONFIG).renameTo(new File(Config.DEFAULT_CONFIG_FILE));
+        
+        commandBox.runCommand(RedoCommand.COMMAND_WORD);
+        assertUnsuccessfulMessage(Messages.MESSAGE_CONFIG_ERROR);
+        
+        new File(Config.DEFAULT_CONFIG_FILE).renameTo(new File(INVALID_CONFIG));
+        new File(TEMP_CONFIG).renameTo(new File(Config.DEFAULT_CONFIG_FILE));
     }
     
     private void assertRedoSuccess(String message, Task... expectedHits) {
@@ -181,7 +307,7 @@ public class RedoCommandTest extends TaskManagerGuiTest {
     private void assertRedoDirectorySuccess(String message) throws DataConversionException {
         commandBox.runCommand(RedoCommand.COMMAND_WORD);
         Config config = ConfigUtil.readConfig(Config.DEFAULT_CONFIG_FILE).get();
-        assertTrue(config.getTaskManagerFileDirectory().contains(TEST_DATA_FOLDER.substring(0, TEST_DATA_FOLDER.length() - 1)));
+        assertTrue(config.getTaskManagerFileDirectory().contains(TEST_DATA_FOLDER_TEMP.substring(0, TEST_DATA_FOLDER_TEMP.length() - 1)));
         assertSuccessfulMessage(message);
     }
   
@@ -195,15 +321,19 @@ public class RedoCommandTest extends TaskManagerGuiTest {
     
     //Restores original taskManager directory
     public void restoreStorage() throws IOException {
-        commandBox.runCommand(ChangeDirectoryCommand.COMMAND_WORD + " " + taskManagerDirectory);
+        commandBox.runCommand(UndoCommand.COMMAND_WORD);
     }
     
     //Stores original taskManager directory and file name
     @Before
-    public void setUp() throws DataConversionException {
+    public void setUp() throws DataConversionException, IOException {
         config = ConfigUtil.readConfig(Config.DEFAULT_CONFIG_FILE).get();
         taskManagerDirectory = config.getTaskManagerFileDirectory();
         taskManagerFileName = config.getTaskManagerFileName();
+        
+        config.setTaskManagerFileDirectory(TEST_DATA_FOLDER);
+        config.setTaskManagerFileName(TEST_DATA_FILE);
+        ConfigUtil.saveConfig(config, Config.DEFAULT_CONFIG_FILE);
     }
     
     //Restores original taskManager directory and file name
@@ -219,72 +349,131 @@ public class RedoCommandTest extends TaskManagerGuiTest {
 ``` java
 public class UndoCommandTest extends TaskManagerGuiTest {
 
-    private static String TEST_DATA_FOLDER = FileUtil.getPath("./src/test/data/StorageDirectoryUtilTest/");
-    private static String TEST_DATA_FILE = TEST_DATA_FOLDER + "ValidFormatTaskManager.xml";
-    
+    private static final String TEST_DATA_FOLDER = FileUtil.getPath("src/test/data/StorageDirectoryUtilTest");
+    private static final String TEST_DATA_TEMP_FOLDER = FileUtil.getPath("src/test/data/StorageDirectoryUtilTest/temp");
+    private static final String TEST_DATA_FILE_NAME = "ValidFormatTaskManager.xml";
+    private static final String TEST_DATA_ANOTHER_FILE_NAME = "AnotherValidFormatTaskManager.xml";
+    private static final String TEST_DATA_FILE_PATH = TEST_DATA_TEMP_FOLDER + File.separator + TEST_DATA_ANOTHER_FILE_NAME;
+    private static final String INVALID_CONFIG = FileUtil.getPath("src/test/data/ConfigUtilTest/NotJasonFormatConfig.json");
+    private static final String TEMP_CONFIG = "temp.json";
+
     private Config config;
     private String taskManagerPath;
+    private String taskManagerDirectory;
+    private String taskManagerFileName;
     
+    //Undo with an empty history
     @Test
-    public void undo() {
+    public void undo_emptyHistory_messageDisplayed() {
+        StorageUtil.clearHistory();
+        commandBox.runCommand(UndoCommand.COMMAND_WORD);
+        assertUnsuccessfulMessage(UndoCommand.MESSAGE_EMPTY_HISTORY);
+    }
+    
+    //Undo after add command
+    @Test
+    public void undo_addCommand_taskListRestored() {
         Task[] currentList = td.getTypicalTasks();
-        
-        //Undo with an empty history
-        assertUndoSuccess(currentList);
-        
-        //Undo after add command
         commandBox.runCommand(AddCommand.COMMAND_WORD + " " + td.helpFriend.getName());
-        assertUndoSuccess(currentList);
-        
-        //Undo after remove command
-        commandBox.runCommand(RemoveCommand.COMMAND_WORD + " 1");
-        assertUndoSuccess(currentList);
-        
-        //Undo after edit command
+        assertUndoSuccess(UndoCommand.MESSAGE_SUCCESS, currentList);
+    }
+    
+    //Undo after edit command
+    @Test
+    public void undo_editCommand_taskListRestored() {
+        Task[] currentList = td.getTypicalTasks();
         commandBox.runCommand(EditCommand.COMMAND_WORD + " 1 " + td.helpFriend.getName());
-        assertUndoSuccess(currentList);
-        
-        //Undo after clear command
+        assertUndoSuccess(UndoCommand.MESSAGE_SUCCESS, currentList);
+    }
+    
+    //Undo after remove command
+    @Test
+    public void undo_removeCommand_taskListRestored() {  
+        Task[] currentList = td.getTypicalTasks();
+        commandBox.runCommand(RemoveCommand.COMMAND_WORD + " 1");
+        assertUndoSuccess(UndoCommand.MESSAGE_SUCCESS, currentList);
+    }
+    
+    //Undo after clear command
+    @Test
+    public void undo_clearCommand_taskListRemoved() {
+        Task[] currentList = td.getTypicalTasks();
         commandBox.runCommand(ClearCommand.COMMAND_WORD);
-        assertUndoSuccess(currentList);
-        
-        //Undo after reschedule command
+        assertUndoSuccess(UndoCommand.MESSAGE_SUCCESS, currentList);    
+    }
+    
+    //Undo after reschedule command 
+    @Test
+    public void undo_rescheduleCommand_taskListRestored() {
+        Task[] currentList = td.getTypicalTasks();
         commandBox.runCommand(RescheduleCommand.COMMAND_WORD + " 1 18 Oct");
-        assertUndoSuccess(currentList);
-        
-        //Undo after done command
+        assertUndoSuccess(UndoCommand.MESSAGE_SUCCESS, currentList);
+    }
+    
+    //Undo after done command        
+    @Test
+    public void undo_doneCommand_taskListRestored() {
+        Task[] currentList = td.getTypicalTasks();
         commandBox.runCommand(DoneCommand.COMMAND_WORD + " 1");
-        assertUndoSuccess(currentList);
+        assertUndoSuccess(UndoCommand.MESSAGE_SUCCESS, currentList);
         
-        //Undo after redo command
+    }
+    
+    //Undo after redo command        
+    @Test 
+    public void undo_redoCommand_taskListRestored() {
+        Task[] currentList = td.getTypicalTasks();
         commandBox.runCommand(AddCommand.COMMAND_WORD + " " + td.helpFriend.getName());
         commandBox.runCommand(UndoCommand.COMMAND_WORD);
         commandBox.runCommand(RedoCommand.COMMAND_WORD);
-        assertUndoSuccess(currentList);
-        
-        //Undo after storage directory change
+        assertUndoSuccess(UndoCommand.MESSAGE_SUCCESS, currentList);
+    }
+    
+    //Undo after storage directory change
+    @Test
+    public void undo_changeDirectory_taskListRestored() {
         try {
-            commandBox.runCommand(ChangeDirectoryCommand.COMMAND_WORD + " " + TEST_DATA_FOLDER);
-            assertUndoStorageSuccess(UndoCommand.MESSAGE_SUCCESS);
-        } catch (DataConversionException e) {
-            e.printStackTrace();
-        }
-
-        //Undo after file storage change
-        try {
-            commandBox.runCommand(OpenFileCommand.COMMAND_WORD + " " + TEST_DATA_FILE);
+            commandBox.runCommand(ChangeDirectoryCommand.COMMAND_WORD + " " + TEST_DATA_TEMP_FOLDER);
             assertUndoStorageSuccess(UndoCommand.MESSAGE_SUCCESS);
         } catch (DataConversionException e) {
             e.printStackTrace();
         }
     }
     
-    private void assertUndoSuccess(Task... expectedHits) {
+    //Undo after file storage change
+    @Test
+    public void undo_openFile_taskListRestored() {
+        try {
+            commandBox.runCommand(OpenFileCommand.COMMAND_WORD + " " + TEST_DATA_FILE_PATH);
+            assertUndoStorageSuccess(UndoCommand.MESSAGE_SUCCESS);
+        } catch (DataConversionException e) {
+            e.printStackTrace();
+        }
+    }
+    
+    //Undo storage operation when config file is invalid
+    @Test
+    public void undo_invalidConfig_dataConversionException() {
+        commandBox.runCommand(OpenFileCommand.COMMAND_WORD + " " + TEST_DATA_FILE_PATH);
+        
+        new File(Config.DEFAULT_CONFIG_FILE).renameTo(new File(TEMP_CONFIG));
+        new File(INVALID_CONFIG).renameTo(new File(Config.DEFAULT_CONFIG_FILE));
+        
+        commandBox.runCommand(UndoCommand.COMMAND_WORD);
+        assertUnsuccessfulMessage(Messages.MESSAGE_CONFIG_ERROR);
+        
+        new File(Config.DEFAULT_CONFIG_FILE).renameTo(new File(INVALID_CONFIG));
+        new File(TEMP_CONFIG).renameTo(new File(Config.DEFAULT_CONFIG_FILE));
+        commandBox.runCommand(UndoCommand.COMMAND_WORD);
+    }
+    
+    private void assertUndoSuccess(String message, Task... expectedHits) {
         commandBox.runCommand(UndoCommand.COMMAND_WORD);
         
         //Confirms the list size remains the same and does reverts to its original after undo
         assertListSize(expectedHits.length);
         assertTrue(taskListPanel.isListMatching(expectedHits.length));
+        assertSuccessfulMessage(message);
     }
     
     //Assertion for undo in change of directory
@@ -296,10 +485,27 @@ public class UndoCommandTest extends TaskManagerGuiTest {
         assertSuccessfulMessage(message);
     }
   
+    //Stores original taskManager directory and file name
     @Before
-    public void setUp() throws DataConversionException {
+    public void setUp() throws DataConversionException, IOException {
         config = ConfigUtil.readConfig(Config.DEFAULT_CONFIG_FILE).get();
+        taskManagerDirectory = config.getTaskManagerFileDirectory();
+        taskManagerFileName = config.getTaskManagerFileName();
+        
+        File tempDirectory = new File(TEST_DATA_FOLDER);
+        config.setTaskManagerFileDirectory(tempDirectory.getAbsolutePath());
+        config.setTaskManagerFileName(TEST_DATA_FILE_NAME);
+        ConfigUtil.saveConfig(config, Config.DEFAULT_CONFIG_FILE);
+        
         taskManagerPath = config.getTaskManagerFilePath();
+    }
+    
+    //Restores original taskManager directory and file name
+    @After
+    public void tearDown() throws IOException {
+        config.setTaskManagerFileDirectory(taskManagerDirectory);
+        config.setTaskManagerFileName(taskManagerFileName);
+        ConfigUtil.saveConfig(config, Config.DEFAULT_CONFIG_FILE);
     }
 }
 ```
