--- a/collated/test/A0141780J.md
+++ b/collated/test/A0141780J.md
@@ -1,47 +1,65 @@
 # A0141780J
 ###### \java\guitests\AddCommandTest.java
 ``` java
-public class AddCommandTest extends TaskManagerGuiTest {
-
     @Test
-    public void add() {
-        //add one task
+    public void addCommand_twoConsecutiveFloatTasks_successfulTaskAdd() {
+        // add one task
         Task[] currentList = td.getTypicalTasks();
         Task taskToAdd = td.helpFriend;
         assertAddSuccess(taskToAdd, currentList);
         currentList = TestUtil.addTasksToList(currentList, taskToAdd);
-
-        //add another task
+        
+        // add another different task
         taskToAdd = td.interview;
         assertAddSuccess(taskToAdd, currentList);
-        currentList = TestUtil.addTasksToList(currentList, taskToAdd);
-
-        //add duplicate task successful
-        taskToAdd = new FloatTask(td.helpFriend);
+    }
+    
+    @Test
+    public void addCommand_duplicateTask_successfulTaskAdd() {
+        // add one task
+        Task[] currentList = td.getTypicalTasks();
+        
+        // add duplicate task successful
+        Task taskToAdd = new FloatTask(td.attendMeeting);
         assertAddSuccess(taskToAdd, currentList);
-        currentList = TestUtil.addTasksToList(currentList, taskToAdd);
-
-        //add to empty list
+    }
+    
+    @Test
+    public void addCommand_addToEmptyList_successfulTaskAdd() {
+        // Clear task list first
         commandBox.runCommand("clear");
-        currentList = new Task[0];
-        taskToAdd = td.attendMeeting;
+        
+        // add one task to the empty list
+        Task[] currentList = new Task[0];
+        Task taskToAdd = td.attendMeeting;
         assertAddSuccess(taskToAdd, currentList);
-        currentList = TestUtil.addTasksToList(currentList, taskToAdd);
-
+    }
+    
+    @Test
+    public void addCommand_invalidCommand_unknownCommandMsgShown() {
         //unknown command
         commandBox.runCommand("adds Johnny");
         assertUnsuccessfulMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
-        
+    }
+    
+    @Test
+    public void addCommand_addDeadline_successfulDeadlineAdd() {
+        Task[] currentList = td.getTypicalTasks();
         //valid deadline add command
-        taskToAdd = td.assignmentDeadline;
+        Task taskToAdd = td.assignmentDeadline;
         assertAddSuccess(taskToAdd, currentList);
-        currentList = TestUtil.addTasksToList(currentList, taskToAdd);
-        
-        //valid event add command
-        taskToAdd = td.charityEvent;
+    }
+    
+    @Test
+    public void addCommand_addEvent_successfulEventAdd() {
+        Task[] currentList = td.getTypicalTasks();
+        //valid deadline add command
+        Task taskToAdd = td.charityEvent;
         assertAddSuccess(taskToAdd, currentList);
-        currentList = TestUtil.addTasksToList(currentList, taskToAdd);
-
+    }
+    
+    @Test
+    public void addCommand_addInvalidEvent_invalidCommandMsgShown() {
         //Invalid event add format
         commandBox.runCommand("add watch movie with friends by 7pm to 9pm");
         assertUnsuccessfulMessage(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, 
@@ -55,26 +73,40 @@ public class AddCommandTest extends TaskManagerGuiTest {
 public class FindCommandTest extends TaskManagerGuiTest {
 
     @Test
-    public void execute_findNonEmptyList_returnsCorrectResults() {
+    public void findCommand_findNonEmptyList_returnsCorrectResults() {
         assertFindResult("find Mark"); //no results
         assertFindResult("find Milk", td.buyMilk, td.deliverGoods); //multiple results
 
-        //find after deleting one result
+        //find after removing one task
         
         commandBox.runCommand("remove 1");
         assertFindResult("find Milk", td.deliverGoods);
     }
 
     @Test
-    public void execute_findEmptyList_returnsNoResults(){
-        commandBox.runCommand("clear");
-        assertFindResult("find Jean"); //no results
+    public void findCommand_findDoneTask_returnsDoneTasks(){
+        commandBox.runCommand("done 1");
+        assertFindResult("find Charity -done", td.charityEvent); 
+        assertShownStatuses(false, true, false);
+    }
+    
+    @Test
+    public void findCommand_findPendingDoneTask_returnsPendingDoneTasks(){
+        commandBox.runCommand("done 1");
+        assertFindResult("find Charity -done -pending", td.charityEvent); 
+        assertShownStatuses(true, true, false);
     }
 
     @Test
-    public void execute_findInvalidCommand_fail() {
+    public void findCommand_findInvalidCommand_fail() {
         commandBox.runCommand("findgeorge");
         assertUnsuccessfulMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
+    }
+    
+    @Test
+    public void findCommand_findEmptyList_returnsNoResults(){
+        commandBox.runCommand("clear");
+        assertFindResult("find Milk"); //no results
     }
 
     private void assertFindResult(String command, Task... expectedHits ) {
@@ -82,6 +114,74 @@ public class FindCommandTest extends TaskManagerGuiTest {
         assertListSize(expectedHits.length);
         assertSuccessfulMessage(expectedHits.length + " task listed!");
         assertTrue(taskListPanel.isListMatching(expectedHits));
+    }
+}
+```
+###### \java\guitests\ListCommandTest.java
+``` java
+    @Test
+    public void listCommand_listNonEmptyList_returnsCorrectResults() {
+        // list after removing one task
+        commandBox.runCommand("remove 1");
+        Task[] currentList = td.getTypicalTasks();
+        currentList = TestUtil.removeTaskFromList(currentList, 1);
+        assertListResult("list", true, false, true, currentList);
+    }
+
+    @Test
+    public void listCommand_listDoneTasks_returnsDoneTasks(){
+        commandBox.runCommand("done 1");
+        commandBox.runCommand("done 1");
+        assertListResult("list -done", 
+                false, true, false,
+                new Task[] { td.charityEvent, td.assignmentDeadline }); 
+    }
+    
+    @Test
+    public void listCommand_listPendingOverdueTask_returnsPendingOverdueTasks(){
+        commandBox.runCommand("done 2");
+        Task[] currentList = td.getTypicalTasks();
+        currentList = TestUtil.removeTaskFromList(currentList, 2);
+        assertListResult("list -overdue -pending", 
+                true, false, true, 
+                currentList); 
+    }
+
+    @Test
+    public void listCommand_findInvalidCommand_fail() {
+        commandBox.runCommand("findgeorge");
+        assertUnsuccessfulMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
+    }
+    
+    
+    @Test
+    public void listCommand_listAll_returnsAllTasks(){
+        assertListResult("list -all", true, true, true, td.getTypicalTasks());
+    }
+
+    private void assertListResult(String command, boolean showPending, 
+            boolean showDone, boolean showOverdue, Task... expectedHits ) {
+        commandBox.runCommand(command);
+        assertListSize(expectedHits.length);
+        String[] msgStrings = new String[] {
+            "Not Pending", "Not Done", "Not Overdue"
+        };
+        if (showPending) {
+            msgStrings[0] = "Pending";
+        }
+        
+        if (showDone) {
+            msgStrings[1] = "Done";
+        }
+        
+        if (showOverdue) {
+            msgStrings[2] = "Overdue";
+        }
+        
+        assertSuccessfulMessage(
+                "Listed " + String.join(", ", msgStrings) + " tasks");
+        assertTrue(taskListPanel.isListMatching(expectedHits));
+        assertShownStatuses(showPending, showDone, showOverdue);
     }
 }
 ```
@@ -103,27 +203,28 @@ public class DateFormatUtilTest {
     }
 
     @Test
-    public void formatDate_dateWithTime_returnTimeCommaDate(){
-        String expected = "7:00PM, 10 Nov 2016";
+    public void formatDate_dateWithTime_returnDateCommaTime(){
+        String expected = "10 Nov 2016, 7:00PM";
         calendar.set(2016, 10, 10, 19, 0);
         Date inputDate = calendar.getTime();
-        String actual = DateFormatUtil.formatDate(inputDate);
+        String actual = DateFormatUtil.formatSingleDate(inputDate);
         assertEquals(expected, actual);
     }
 
 
     @Test
-    public void formatDate_dateWithoutTime_returnDateOnly(){
+    public void formatDate_dateWithTime2359_returnDateOnly(){
         String expected = "1 Jan 2016";
-        calendar.set(2016, 0, 1, 0, 0);
+        calendar.set(2016, 0, 1, 23, 59, 59);
+        calendar.set(Calendar.MILLISECOND, 999);
         Date inputDate = calendar.getTime();
-        String actual = DateFormatUtil.formatDate(inputDate);
+        String actual = DateFormatUtil.formatSingleDate(inputDate);
         assertEquals(expected, actual);
     }
     
     @Test
-    public void formatEventDate_sameDayDifferentTime_returnTimeToTimeCommaDate(){
-        String expected = "6:00PM to 6:30PM, 14 Feb 2016";
+    public void formatEventDate_sameDayDifferentTime_returnDateCommaTimeToTime(){
+        String expected = "14 Feb 2016, 6:00PM to 6:30PM";
         calendar.set(2016, 1, 14, 18, 0);
         Date startDate = calendar.getTime();
         calendar.set(2016, 1, 14, 18, 30);
@@ -133,8 +234,8 @@ public class DateFormatUtilTest {
     }
     
     @Test
-    public void formatEventDate_sameDaySameTime_returnTimeCommaDate(){
-        String expected = "3:00PM, 18 Apr 2016";
+    public void formatEventDate_sameDaySameTime_returnDateCommaTime(){
+        String expected = "18 Apr 2016, 3:00PM";
         calendar.set(2016, 3, 18, 15, 0);
         Date startDate = calendar.getTime();
         calendar.set(2016, 3, 18, 15, 0);
@@ -145,7 +246,7 @@ public class DateFormatUtilTest {
     
     @Test
     public void formatEventDate_differentDaySameTime_returnFullDateTimeToDateTime(){
-        String expected = "3:00PM, 17 Oct 2016 to 3:00PM, 18 Oct 2016";
+        String expected = "17 Oct 2016, 3:00PM to 18 Oct 2016, 3:00PM";
         calendar.set(2016, 9, 17, 15, 0);
         Date startDate = calendar.getTime();
         calendar.set(2016, 9, 18, 15, 0);
@@ -155,8 +256,8 @@ public class DateFormatUtilTest {
     }
     
     @Test
-    public void formatEventDate_sameDay12Am_return(){
-        String expected = "17 Oct 2016";
+    public void formatEventDate_sameDay12Am_return12AmSingleDate(){
+        String expected = "17 Oct 2016, 12:00AM";
         calendar.set(2016, 9, 17, 00, 0);
         Date startDate = calendar.getTime();
         calendar.set(2016, 9, 17, 00, 0);
@@ -164,7 +265,44 @@ public class DateFormatUtilTest {
         String actual = DateFormatUtil.formatEventDates(startDate, endDate);
         assertEquals(expected, actual);
     }
-
+    
+    @Test
+    public void formatEventDate_differentDaysNoTime_returnTwoDatesWithNoTime() {
+        String expected = "17 Oct 2016 to 18 Oct 2016";
+        calendar.set(2016, 9, 17, 23, 59, 59);
+        calendar.set(Calendar.MILLISECOND, 999);
+        Date startDate = calendar.getTime();
+        calendar.set(2016, 9, 18, 23, 59, 59);
+        calendar.set(Calendar.MILLISECOND, 999);
+        Date endDate = calendar.getTime();
+        String actual = DateFormatUtil.formatEventDates(startDate, endDate);
+        assertEquals(expected, actual);
+    }
+    
+    @Test
+    public void formatEventDate_from2359Day1ToDay2_returnSingleDateToDateTime(){
+        String expected = "17 Oct 2016 to 18 Oct 2016, 11:58PM";
+        calendar.set(2016, 9, 17, 23, 59, 59);
+        calendar.set(Calendar.MILLISECOND, 999);
+        Date startDate = calendar.getTime();
+        calendar.set(2016, 9, 18, 23, 58, 00);
+        Date endDate = calendar.getTime();
+        String actual = DateFormatUtil.formatEventDates(startDate, endDate);
+        assertEquals(expected, actual);
+    }
+    
+    @Test
+    public void formatForAddCommand_from2359Day1ToDay2_returnSingleDateToDateTime(){
+        String expected = "17 Oct 2016, 11:59PM to 18 Oct 2016, 11:58PM";
+        calendar.set(2016, 9, 17, 23, 59, 59);
+        calendar.set(Calendar.MILLISECOND, 999);
+        Date startDate = calendar.getTime();
+        calendar.set(2016, 9, 18, 23, 58, 00);
+        Date endDate = calendar.getTime();
+        String actual = DateFormatUtil.getDateArgString(startDate, endDate);
+        assertEquals(expected, actual);
+    }
+    
 }
 ```
 ###### \java\taskle\logic\DateParserTest.java
@@ -201,7 +339,7 @@ public class DateParserTest {
     public void parseDate_singleDate_returnDateListWithOneDate() {
         String singleDateString = "14 Feb 2016";
         List<Date> expected =  new ArrayList<>();
-        calendar.set(2016, 1, 14);
+        calendar.set(2016, 1, 14, 23, 59, 59);
         Date singleDateExpected = calendar.getTime();
         expected.add(singleDateExpected);
         List<Date> actual = DateParser.parse(singleDateString);
@@ -209,13 +347,13 @@ public class DateParserTest {
     }
     
     @Test
-    public void parseDate_twoDates_returnDateListWithTwpDates() {
+    public void parseDate_twoDates_returnDateListWithTwoDates() {
         String singleDateString = "14 Feb 2016 to 16 Feb 2016";
         List<Date> expected =  new ArrayList<>();
-        calendar.set(2016, 1, 14);
+        calendar.set(2016, 1, 14, 23, 59, 59);
         Date firstDateExpected = calendar.getTime();
         expected.add(firstDateExpected);
-        calendar.set(2016, 1, 16);
+        calendar.set(2016, 1, 16, 23, 59, 59);
         Date secondDateExpected = calendar.getTime();
         expected.add(secondDateExpected);
         List<Date> actual = DateParser.parse(singleDateString);
@@ -247,69 +385,241 @@ public class DateParserTest {
 ###### \java\taskle\logic\LogicManagerTest.java
 ``` java
     @Test
-    public void execute_add_successful() throws Exception {
+    public void executeAddCommand_addFloatTask_successfulTaskAdd() throws Exception {
         // setup expectations
         TestDataHelper helper = new TestDataHelper();
-        FloatTask toBeAdded = helper.adam();
-        TaskManager expectedAB = new TaskManager();
-        expectedAB.addTask(toBeAdded);
+        FloatTask toBeAdded = helper.buyEggs();
+        TaskManager expectedTM = new TaskManager();
+        expectedTM.addTask(toBeAdded);
 
         // execute command and verify result
         assertCommandBehavior(helper.generateAddCommand(toBeAdded),
                 String.format(AddCommand.MESSAGE_SUCCESS, toBeAdded),
-                expectedAB,
-                expectedAB.getTaskList());
+                expectedTM,
+                expectedTM.getTaskList());
+
+    }
+    
+    @Test
+    public void executeAddCommand_addEventWithDates_successfulEventAdd() throws Exception {
+        // setup expectations
+        TestDataHelper helper = new TestDataHelper();
+        EventTask toBeAdded = helper.finalExams();
+        TaskManager expectedTM = new TaskManager();
+        expectedTM.addTask(toBeAdded);
+
+        // execute command and verify result
+        assertCommandBehavior(
+                helper.generateAddCommandWithDate(toBeAdded, 
+                        helper.ADD_SUCCESSFUL_EVENT_DATE),
+                String.format(AddCommand.MESSAGE_SUCCESS, toBeAdded),
+                expectedTM,
+                expectedTM.getTaskList());
+    }
+    
+```
+###### \java\taskle\logic\LogicManagerTest.java
+``` java
+    @Test
+    public void executeAddCommand_addDeadlineWithDates_successfulDeadlineAdd() throws Exception {
+        // setup expectations
+        TestDataHelper helper = new TestDataHelper();
+        DeadlineTask toBeAdded = helper.finishAssignment();
+        TaskManager expectedTM = new TaskManager();
+        expectedTM.addTask(toBeAdded);
+
+        // execute command and verify result
+        assertCommandBehavior(
+                helper.generateAddCommandWithDate(toBeAdded, 
+                        helper.ADD_SUCCESSFUL_DEADLINE_DATE),
+                String.format(AddCommand.MESSAGE_SUCCESS, toBeAdded),
+                expectedTM,
+                expectedTM.getTaskList());
+    }
+    
+```
+###### \java\taskle\logic\LogicManagerTest.java
+``` java
+    @Test
+    public void executeAddCommand_addEventTmr_successfulEventAdd() throws Exception {
+        // setup expectations
+        TestDataHelper helper = new TestDataHelper();
+        EventTask toBeAdded = helper.tutorialTmr();
+        TaskManager expectedTM = new TaskManager();
+        expectedTM.addTask(toBeAdded);
+
+        // execute command and verify result
+        assertCommandBehavior(
+                helper.generateAddCommandWithDate(toBeAdded, 
+                        helper.ADD_TMR_SUCCESSFUL_DATE),
+                String.format(AddCommand.MESSAGE_SUCCESS, toBeAdded),
+                expectedTM,
+                expectedTM.getTaskList());
+    }
+    
+    @Test
+    public void executeAddCommand_addTaskWithByInName_byRecognizedAsPartOfName() 
+            throws Exception {
+        // setup expectations
+        TestDataHelper helper = new TestDataHelper();
+        EventTask toBeAdded = helper.gardensByTheBay();
+        TaskManager expectedTM = new TaskManager();
+        expectedTM.addTask(toBeAdded);
+
+        // execute command and verify result
+        assertCommandBehavior(
+                helper.ADD_COMMAND_GARDENS_BY_BAY,
+                String.format(AddCommand.MESSAGE_SUCCESS, toBeAdded),
+                expectedTM,
+                expectedTM.getTaskList());
+    }
+    
+    @Test
+    public void executeAddCommand_addEventOnSingleDate_successfulEventAdd() throws Exception {
+        // setup expectations
+        TestDataHelper helper = new TestDataHelper();
+        EventTask toBeAdded = helper.newYearDay();
+        TaskManager expectedTM = new TaskManager();
+        expectedTM.addTask(toBeAdded);
+
+        // execute command and verify result
+        assertCommandBehavior(
+                helper.ADD_COMMAND_NEW_YEAR_DAY,
+                String.format(AddCommand.MESSAGE_SUCCESS, toBeAdded),
+                expectedTM,
+                expectedTM.getTaskList());
+    }
+    
+    @Test
+    public void executeAddCommand_addFloatTaskWithDelimiter_taskAddedWithDelimiter() 
+            throws Exception {
+        // setup expectations
+        TestDataHelper helper = new TestDataHelper();
+        FloatTask toBeAdded = helper.getFoodFromChinatown();
+        TaskManager expectedTM = new TaskManager();
+        expectedTM.addTask(toBeAdded);
+
+        // execute command and verify result
+        assertCommandBehavior(
+                helper.generateAddCommand(toBeAdded),
+                String.format(AddCommand.MESSAGE_SUCCESS, toBeAdded),
+                expectedTM,
+                expectedTM.getTaskList());
+    }
+    
+```
+###### \java\taskle\logic\LogicManagerTest.java
+``` java
+    @Test
+    public void executeAddCommand_addDeadlineTaskMorethanTwoDates_returnIncorrectCommand() 
+            throws Exception {
+        // setup expectations
+        TestDataHelper helper = new TestDataHelper();
+        FloatTask toBeAdded = helper.buyEggs();
+        TaskManager expectedTM = new TaskManager();
+        expectedTM.addTask(toBeAdded);
+
+        // setup starting state
+        model.addTask(toBeAdded); // task already in internal task manager
+
+        // execute command and verify result
+        assertCommandBehavior(
+                helper.ADD_COMMAND_GET_DOCS_FROM_BOB,
+                String.format(MESSAGE_INVALID_COMMAND_FORMAT, 
+                              AddCommand.MESSAGE_USAGE),
+                expectedTM,
+                expectedTM.getTaskList());
+
+    }
+
+    @Test
+    public void executeAddCommand_addDuplicate_allowed() throws Exception {
+        // setup expectations
+        TestDataHelper helper = new TestDataHelper();
+        FloatTask toBeAdded = helper.buyEggs();
+        TaskManager expectedTM = new TaskManager();
+        expectedTM.addTask(toBeAdded);
+        expectedTM.addTask(toBeAdded);
+
+        // setup starting state
+        model.addTask(toBeAdded); // task already in internal task manager
+
+        // execute command and verify result
+        assertCommandBehavior(
+                helper.generateAddCommand(toBeAdded),
+                String.format(AddCommand.MESSAGE_SUCCESS, toBeAdded),
+                expectedTM,
+                expectedTM.getTaskList());
+
+    }
+    
+    @Test
+    public void executeAddCommand_noArguments_returnUsageMessage() throws Exception {
+        // setup expectations
+        TaskManager expectedTM = new TaskManager();
+
+        // execute command and verify result
+        String command = "add";
+        assertCommandBehavior(
+                command,
+                String.format(MESSAGE_INVALID_COMMAND_FORMAT, 
+                              AddCommand.MESSAGE_USAGE),
+                expectedTM,
+                expectedTM.getTaskList());
 
     }
 ```
 ###### \java\taskle\logic\LogicManagerTest.java
 ``` java
     @Test
-    public void execute_findInvalidArgs_returnInvalidCommand() throws Exception {
+    public void executeFindCommand_findInvalidArgs_returnInvalidCommand() throws Exception {
         String expectedMessage = String.format(MESSAGE_INVALID_COMMAND_FORMAT, FindCommand.MESSAGE_USAGE);
         assertCommandBehavior("find ", expectedMessage);
     }
 
     @Test
-    public void execute_find_onlyMatchesFullWordsInNames() throws Exception {
+    public void executeFindCommand_findKeywordInMultipleTasks_onlyMatchesFullWordsInNames() 
+            throws Exception {
         TestDataHelper helper = new TestDataHelper();
         Task pTarget1 = helper.generateTaskWithName("bla bla KEY bla");
         Task pTarget2 = helper.generateTaskWithName("bla KEY bla bceofeia");
         Task p1 = helper.generateTaskWithName("KE Y");
         Task p2 = helper.generateTaskWithName("KEYKEYKEY sduauo");
 
-        List<Task> fourPersons = helper.generateTaskList(p1, pTarget1, p2, pTarget2);
-        TaskManager expectedAB = helper.generateTaskManager(fourPersons);
+        List<Task> fourTasks = helper.generateTaskList(p1, pTarget1, p2, pTarget2);
+        TaskManager expectedTM = helper.generateTaskManager(fourTasks);
         List<Task> expectedList = helper.generateTaskList(pTarget1, pTarget2);
-        helper.addToModel(model, fourPersons);
+        helper.addToModel(model, fourTasks);
 
         assertCommandBehavior("find KEY",
                 Command.getMessageForTaskListShownSummary(expectedList.size()),
-                expectedAB,
+                expectedTM,
                 expectedList);
     }
 
     @Test
-    public void execute_find_isNotCaseSensitive() throws Exception {
+    public void executeFindCommand_findCaseSensitive_returnCaseSensitiveResults() 
+            throws Exception {
         TestDataHelper helper = new TestDataHelper();
         Task p1 = helper.generateTaskWithName("bla bla KEY bla");
         Task p2 = helper.generateTaskWithName("bla KEY bla bceofeia");
         Task p3 = helper.generateTaskWithName("key key");
         Task p4 = helper.generateTaskWithName("KEy sduauo");
 
-        List<Task> fourPersons = helper.generateTaskList(p3, p1, p4, p2);
-        TaskManager expectedAB = helper.generateTaskManager(fourPersons);
-        List<Task> expectedList = fourPersons;
-        helper.addToModel(model, fourPersons);
+        List<Task> fourTasks = helper.generateTaskList(p3, p1, p4, p2);
+        TaskManager expectedTM = helper.generateTaskManager(fourTasks);
+        List<Task> expectedList = fourTasks;
+        helper.addToModel(model, fourTasks);
 
         assertCommandBehavior("find KEY",
                 Command.getMessageForTaskListShownSummary(expectedList.size()),
-                expectedAB,
+                expectedTM,
                 expectedList);
     }
 
     @Test
-    public void execute_find_matchesIfAnyKeywordPresent() throws Exception {
+    public void executeFindCommand_findMultipleKeywords_matchesIfAnyKeywordPresent() 
+            throws Exception {
         TestDataHelper helper = new TestDataHelper();
         Task pTarget1 = helper.generateTaskWithName("bla bla KEY bla");
         Task pTarget2 = helper.generateTaskWithName("bla rAnDoM bla bceofeia");
@@ -317,18 +627,18 @@ public class DateParserTest {
         Task p1 = helper.generateTaskWithName("sduauo");
 
         List<Task> fourTasks = helper.generateTaskList(pTarget1, p1, pTarget2, pTarget3);
-        TaskManager expectedAB = helper.generateTaskManager(fourTasks);
+        TaskManager expectedTM = helper.generateTaskManager(fourTasks);
         List<Task> expectedList = helper.generateTaskList(pTarget1, pTarget2, pTarget3);
         helper.addToModel(model, fourTasks);
 
         assertCommandBehavior("find key rAnDoM",
                 Command.getMessageForTaskListShownSummary(expectedList.size()),
-                expectedAB,
+                expectedTM,
                 expectedList);
     }
     
     @Test
-    public void execute_findPendingTask_filtersPendingTask() throws Exception {
+    public void executeFindCommand_findPendingStatus_onlyListPendingTasks() throws Exception {
         TestDataHelper helper = new TestDataHelper();
         Task task1 = helper.generateTaskWithName("Get fruits from supermarket");
         Task task2 = helper.generateTaskWithName("Get David a burger");
@@ -341,18 +651,18 @@ public class DateParserTest {
                 new Name("Get soap to wash car"), deadlineDate);
 
         List<Task> allTasks = helper.generateTaskList(task1, task2, deadlineTask);
-        TaskManager expectedAB = helper.generateTaskManager(allTasks);
+        TaskManager expectedTM = helper.generateTaskManager(allTasks);
         List<Task> expectedList = helper.generateTaskList(task1, deadlineTask);
         helper.addToModel(model, allTasks);
 
         assertCommandBehavior("find Get -pending",
                 Command.getMessageForTaskListShownSummary(expectedList.size()),
-                expectedAB,
+                expectedTM,
                 expectedList);
     }
     
     @Test
-    public void execute_listEmptyArguments_showPendingAndOverdue() throws Exception {
+    public void executeListCommand_emptyArgs_showPendingAndOverdue() throws Exception {
         TestDataHelper helper = new TestDataHelper();
         Task task1 = helper.generateTaskWithName("Buy groceries");
         task1.setTaskDone(true);
@@ -362,18 +672,19 @@ public class DateParserTest {
 
         List<Task> fourTasks = helper.generateTaskList(task1, task2, task3, task4);
         helper.addToModel(model, fourTasks);
-        TaskManager expectedAB = helper.generateTaskManager(fourTasks);
+        TaskManager expectedTM = helper.generateTaskManager(fourTasks);
         List<Task> expectedList = helper.generateTaskList(task2, task3, task4);
 
         String message = "Pending, Not Done, Overdue";
         assertCommandBehavior("list ",
                 String.format(ListCommand.MESSAGE_LIST_SUCCESS, message),
-                expectedAB,
+                expectedTM,
                 expectedList);
     }
     
     @Test
-    public void execute_listDoneOverdue_showsDoneAndOverdueOnly() throws Exception {
+    public void executeListCommand_listDoneOverdue_showsDoneAndOverdueOnly() 
+            throws Exception {
         // prepare expectations
         TestDataHelper helper = new TestDataHelper();
         Task task1 = helper.generateTaskWithName("Buy groceries");
@@ -390,18 +701,19 @@ public class DateParserTest {
 
         List<Task> allTasks = helper.generateTaskList(task1, task2, task3, task4);
         helper.addToModel(model, allTasks);
-        TaskManager expectedAB = helper.generateTaskManager(allTasks);
+        TaskManager expectedTM = helper.generateTaskManager(allTasks);
         List<Task> expectedList = helper.generateTaskList(task1, task4);
 
         String message = "Not Pending, Done, Overdue";
         assertCommandBehavior("list -done -overdue",
                 String.format(ListCommand.MESSAGE_LIST_SUCCESS, message),
-                expectedAB,
+                expectedTM,
                 expectedList);
     }
     
     @Test
-    public void execute_listInvalidFlags_showsErrorWhileDisplayingOldList() throws Exception {
+    public void executeListCommand_invalidStatusFlags_showsErrorWhileDisplayingOldList() 
+            throws Exception {
         // prepare expectations
         TestDataHelper helper = new TestDataHelper();
         Task task1 = helper.generateTaskWithName("Buy groceries");
@@ -418,13 +730,13 @@ public class DateParserTest {
 
         List<Task> allTasks = helper.generateTaskList(task1, task2, task3, task4);
         helper.addToModel(model, allTasks);
-        TaskManager expectedAB = helper.generateTaskManager(allTasks);
+        TaskManager expectedTM = helper.generateTaskManager(allTasks);
         List<Task> expectedList = helper.generateTaskList(task2, task3, task4);
 
         assertCommandBehavior("list -easy",
                 String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, 
                               ListCommand.MESSAGE_USAGE),
-                expectedAB,
+                expectedTM,
                 expectedList);
     }
     
@@ -449,12 +761,12 @@ public class DateParserTest {
         // Generate list from prepared tasks and add to model and expectations.
         List<Task> allTasks = helper.generateTaskList(task1, task2, task3, task4);
         helper.addToModel(model, allTasks);
-        TaskManager expectedAB = helper.generateTaskManager(allTasks);
+        TaskManager expectedTM = helper.generateTaskManager(allTasks);
         List<Task> expectedList = helper.generateTaskList(task2, task3);
 
         assertCommandBehavior("l -pending",
                 String.format(ListCommand.MESSAGE_LIST_SUCCESS, "Pending, Not Done, Not Overdue"),
-                expectedAB,
+                expectedTM,
                 expectedList);
     }
     
@@ -464,13 +776,13 @@ public class DateParserTest {
         TestDataHelper helper = new TestDataHelper();
         Task toAdd = helper.generateTaskWithName("Buy eggs");
         
-        TaskManager expectedAB = new TaskManager();
-        expectedAB.addTask(toAdd);
-        List<ReadOnlyTask> expectedList = expectedAB.getTaskList();
+        TaskManager expectedTM = new TaskManager();
+        expectedTM.addTask(toAdd);
+        List<ReadOnlyTask> expectedList = expectedTM.getTaskList();
 
         assertCommandBehavior("a Buy eggs",
                 String.format(AddCommand.MESSAGE_SUCCESS, toAdd),
-                expectedAB,
+                expectedTM,
                 expectedList);
     }
     
@@ -482,13 +794,13 @@ public class DateParserTest {
         
         List<Task> allTasks = helper.generateTaskList(toRemove);
         
-        TaskManager expectedAB = new TaskManager();
-        List<ReadOnlyTask> expectedList = expectedAB.getTaskList();
+        TaskManager expectedTM = new TaskManager();
+        List<ReadOnlyTask> expectedList = expectedTM.getTaskList();
         helper.addToModel(model, allTasks);
 
         assertCommandBehavior("rm 1",
                 String.format(RemoveCommand.MESSAGE_DELETE_TASK_SUCCESS, 1),
-                expectedAB,
+                expectedTM,
                 expectedList);
     }
     
@@ -502,6 +814,10 @@ public class DateParserTest {
         private final String ADD_SUCCESSFUL_DEADLINE_DATE = " by 31st Dec 2016 2359hours";
         private final String ADD_SUCCESSFUL_DEADLINE_REMINDER = " by 31st Dec 2016 2359hours remind 29th Dec 2016 2359hours";
         private final String ADD_TMR_SUCCESSFUL_DATE = " from tmr 1 to 2pm";
+        private final String ADD_UNSUCCESSFUL_EVENT_INVALID_REMINDER = 
+                "add event from 12 sep 2016 10am to 12 sep 2016 1pm remind 10 oct 2016 10am";
+        private final String ADD_UNSUCCESSFUL_DEADLINE_INVALID_REMINDER = 
+                "add event by 12 sep 2016 1pm remind 10 oct 2016 10am";
         private final String ADD_COMMAND_GARDENS_BY_BAY = 
                 "add Gardens by the Bay outing from 12pm to 2pm 3 December";
         private final String ADD_COMMAND_NEW_YEAR_DAY = 
@@ -515,20 +831,20 @@ public class DateParserTest {
         private final String ADD_COMMAND_REMIND_PAPA = 
                 "add remind papa";
 
-        FloatTask adam() throws Exception {
-            Name name = new Name("Adam Brown");
+        FloatTask buyEggs() {
+            Name name = new Name("Buy eggs");
             return new FloatTask(name);
         }
         
         
-        FloatTask homeworkWithReminder() throws Exception {
+        FloatTask homeworkWithReminder() {
             Name name = new Name("Do homework for CS2103T");
             CALENDAR.set(2016, 8, 12, 10, 00, 00);
             Date remindDate = CALENDAR.getTime();
             return new FloatTask(name, remindDate);
         }
         
-        EventTask finalExams() throws Exception {
+        EventTask finalExams() {
             Name name = new Name("Final Exams");
             CALENDAR.set(2016, 8, 12, 10, 00, 00);
             Date startDate = CALENDAR.getTime();
@@ -537,7 +853,7 @@ public class DateParserTest {
             return new EventTask(name, startDate, endDate);
         }
         
-        EventTask finalExamsWithReminder() throws Exception {
+        EventTask finalExamsWithReminder() {
             Name name = new Name("Final Exams");
             CALENDAR.set(2016, 8, 12, 10, 00, 00);
             Date startDate = CALENDAR.getTime();
@@ -548,7 +864,29 @@ public class DateParserTest {
             return new EventTask(name, startDate, endDate, remindDate);
         }
         
-        EventTask getDocsFromBobWithReminder() throws Exception {
+        EventTask finalExamsWithInvalidReminder() {
+            Name name = new Name("Final Exams");
+            CALENDAR.set(2016, 8, 12, 10, 00, 00);
+            Date startDate = CALENDAR.getTime();
+            CALENDAR.set(2016, 8, 12, 13, 00, 00);
+            Date endDate = CALENDAR.getTime();
+            CALENDAR.set(2016, 9, 10, 10, 00, 00);
+            Date remindDate = CALENDAR.getTime();
+            return new EventTask(name, startDate, endDate, remindDate);
+        }
+        
+        EventTask finalExamsInFarFutureWithReminder() {
+            Name name = new Name("Final Exams");
+            CALENDAR.set(2050, 8, 12, 10, 00, 00);
+            Date startDate = CALENDAR.getTime();
+            CALENDAR.set(2050, 8, 12, 13, 00, 00);
+            Date endDate = CALENDAR.getTime();
+            CALENDAR.set(2050, 8, 10, 10, 00, 00);
+            Date remindDate = CALENDAR.getTime();
+            return new EventTask(name, startDate, endDate, remindDate);
+        }
+        
+        EventTask getDocsFromBobWithReminder() {
             Name name = new Name("Get documents from Bob");
             CALENDAR.set(2016, 3, 14, 00, 00, 00);
             Date startDate = CALENDAR.getTime();
@@ -560,14 +898,14 @@ public class DateParserTest {
         }
         
         
-        DeadlineTask finishAssignment() throws Exception {
+        DeadlineTask finishAssignment() {
             Name name = new Name("Finish Assignment");
             CALENDAR.set(2016, 11, 31, 23, 59, 00);
             Date byDate = CALENDAR.getTime();
             return new DeadlineTask(name, byDate);
         }
         
-        DeadlineTask finishAssignmentWithReminder() throws Exception {
+        DeadlineTask finishAssignmentWithReminder() {
             Name name = new Name("Finish Assignment");
             CALENDAR.set(2016, 11, 31, 23, 59, 00);
             Date byDate = CALENDAR.getTime();
@@ -577,7 +915,7 @@ public class DateParserTest {
         }
         
         
-        EventTask tutorialTmr() throws Exception {
+        EventTask tutorialTmr() {
             Name name = new Name("2103T tutorial");
             Calendar calendar = Calendar.getInstance();
             calendar.set(Calendar.MILLISECOND, 0);
@@ -592,7 +930,7 @@ public class DateParserTest {
             return new EventTask(name, startDate, endDate);
         }
         
-        EventTask gardensByTheBay() throws Exception {
+        EventTask gardensByTheBay() {
             Name name = new Name("Gardens by the Bay outing");
             Calendar calendar = Calendar.getInstance();
             calendar.set(2016, 11, 3, 12, 00);
@@ -602,45 +940,18 @@ public class DateParserTest {
             return new EventTask(name, startDate, endDate);
         }
         
-        EventTask newYearDay() throws Exception {
+        EventTask newYearDay() {
             Name name = new Name("New Year Day");
             Calendar calendar = Calendar.getInstance();
-            calendar.set(2017, 0, 1, 0, 0);
+            calendar.set(2017, 0, 1, 23, 59, 59);
+            calendar.set(Calendar.MILLISECOND, 999);
             Date onDate = calendar.getTime();
             return new EventTask(name, onDate, onDate);
         }
         
-        FloatTask getFoodFromChinatown() throws Exception {
+        FloatTask getFoodFromChinatown() {
             Name name = new Name("Get food from Chinatown");
             return new FloatTask(name);
         }
-
-        /**
-         * Generates a valid task using the given seed.
-         * Running this function with the same parameter values guarantees the returned task will have the same state.
-         * Each unique seed will generate a unique Task object.
-         *
-         * @param seed used to generate the task data field values
-         */
-        Task generateTask(int seed) throws Exception {
-            return new FloatTask(
-                    new Name("Task " + seed));
-        }
-
-        /** Generates the correct add command based on the task given */
-        String generateAddCommand(Task p) {
-            StringBuffer cmd = new StringBuffer();
-            cmd.append("add ");
-            cmd.append(p.getName().toString());
-            return cmd.toString();
-        }
         
-        /** Generates the correct add command based on the task and date String given */
-        String generateAddCommandWithDate(Task p, String dateString) {
-            StringBuffer cmd = new StringBuffer();
-            cmd.append("add ");
-            cmd.append(p.getName().toString());
-            cmd.append(dateString);
-            return cmd.toString();
-        }
 ```
