--- a/collated/docs/A0140047U.md
+++ b/collated/docs/A0140047U.md
@@ -5,31 +5,34 @@
 ### Model component
 
 <img align="center" src="images/ModelClassDiagram.png">
-<div align="center">Figure 8: Model Class Diagram</div><br>
+<div align="center">Figure 9: Model Class Diagram</div><br>
 
-**API** : [`Model.java`](../src/main/taskle/model/Model.java)
+**API**: [`Model.java`](../src/main/taskle/model/Model.java)
 
-The `Model`:
+The `Model` component:
 * Stores a `UserPref` object that represents the user's preferences.
-* Stores the Task Manager data.
-* Exposes a `UnmodifiableObservableList<ReadOnlyTask>` that can be 'observed' e.g. the UI can be bound to this list
-  so that the UI automatically updates when the data in the list change.
+* Stores Taskle's data.
+* Exposes a `UnmodifiableObservableList<ReadOnlyTask>` that can be 'observed'.
+	* Example: The UI can be bound to this list so that it automatically updates when the data in the list changes.
 * Does not depend on any of the other three components.
+* Stores the current instance of Taskle should the user input a mutating command, such as `add`.
 
 ```
 ###### \DeveloperGuide.md
 ``` md
 
+<br>
+
 ## Appendix B : Use Cases
 
-(For all use cases below, the **System** is `Taskle` and the **Actor** is the `user`, unless specified otherwise)
-
-#### Use case: [UC01] Add Float Task
+For all use cases below, the **System** is `Taskle` and the **User** is the `user`, unless specified otherwise.
+<br><br>
+#### Use case: [UC01] Add Floating Task
 
 **MSS**
 
-1. User enters command to add a new task.
-2. System adds new float task. <br/>
+1. User enters command to add a new floating task.
+2. System adds new floating task. <br/>
 Use Case ends.
 
 **Extensions**
@@ -39,7 +42,31 @@ Use Case ends.
 > 1ai. System displays an error message. <br/>
   Use Case ends.
 
-#### Use case: [UC02] Add Deadline Task
+<br>
+
+#### Use case: [UC02] Add Float Task with Reminder
+
+**MSS**
+
+1. User enters command to add a new float task with a reminder date and time.
+2. System adds new float task with reminder. <br/>
+Use Case ends.
+
+**Extensions**
+
+1a. Incorrect command format.
+
+> 1ai. System displays an error message. <br/>
+  Use Case ends.
+
+1b. User enters invalid reminder date.
+
+> 1bi. System displays an error message. <br/>
+  Use Case ends.
+  
+<br>
+  
+#### Use case: [UC03] Add Deadline Task
 
 **MSS**
 
@@ -52,14 +79,48 @@ Use Case ends.
 1a. Incorrect command format.
 
 > 1ai. System displays an error message. <br/>
-	Use Case ends.
+  Use Case ends.
 
 1b. User enters an invalid date.
 
 >1bi. System displays an error message. <br/>
-	Use Case ends.
-	
-#### Use case: [UC03] Add Event Task
+  Use Case ends.
+
+<br>
+
+#### Use case: [UC04] Add Deadline Task with Reminder
+
+**MSS**
+
+1. User enters command to add a new deadline task with a specified date along with a reminder date and time.
+2. System adds new deadline task with reminder. <br/>
+Use Case ends.
+
+**Extensions**
+
+1a. Incorrect command format.
+
+> 1ai. System displays an error message. <br/>
+  Use Case ends.
+
+1b. User enters an invalid date.
+
+>1bi. System displays an error message. <br/>
+  Use Case ends.
+
+1c. User enters an invalid reminder date.
+
+>1ci. System displays an error message. <br/>
+  Use Case ends.
+  
+1d. User enters a reminder date after deadline date.
+
+>1di. System displays an error message. <br/>
+  Use Case ends.
+
+<br>
+  
+#### Use case: [UC05] Add Event Task
 
 **MSS**
 
@@ -72,28 +133,67 @@ Use Case ends.
 1a. Incorrect command format.
 
 > 1ai. System displays an error message. <br/>
-	Use Case ends.
+  Use Case ends.
 
 1b. User enters an invalid date.
 
 >1bi. System displays an error message. <br/>
-	Use Case ends.
-	
+  Use Case ends.
+  
+1c. More than 2 dates entered.
+
+>1ci. System displays an error message. <br/>
+  Use Case ends.
+    
+<br>
+   
+#### Use case: [UC06] Add Event Task with Reminder
+
+**MSS**
+
+1. User enters command to add a new event task with 2 specified dates (from and to) along with a reminder date and time.
+2. System adds new event task with reminder. <br/>
+Use Case ends.
+
+**Extensions**
+
+1a. Incorrect command format.
+
+> 1ai. System displays an error message. <br/>
+  Use Case ends.
+
+1b. User enters an invalid date.
+
+>1bi. System displays an error message. <br/>
+  Use Case ends.
+  
 1c. More than 3 dates entered.
 
 >1ci. System displays an error message. <br/>
-	Use Case ends.
-		
-#### Use case: [UC04] Edit Task
+  Use Case ends.
+
+1d. User enters an invalid reminder date.
+
+>1di. System displays an error message. <br/>
+  Use Case ends.
+  
+1e. User enters a reminder date after the end date of the event.
+
+>1ei. System displays an error message. <br/>
+  Use Case ends.
+    
+<br>
+     
+#### Use case: [UC07] Rename Task
 
 **Preconditions**
 
-Task exists in system
+Task exists in system.
 
 **MSS**
 
-1. User enters command to edit a task.
-2. System edits task. <br/>
+1. User enters command to rename a task.
+2. System renames task. <br/>
 Use Case ends.
 
 **Extensions**
@@ -108,16 +208,18 @@ Use Case ends.
 > 1bi. System displays an error message. <br>
   Use Case ends.
 
-#### Use case: [UC05] Reschedule Task
+<br>
+
+#### Use case: [UC08] Reschedule Task
 
 **Preconditions**
 
-Task exists in system
+Task exists in system.
 
 **MSS**
 
-1. User enters command to reschedule a task.
-2. System edits task. <br/>
+1. User enters command to reschedule a task to the specified date.
+2. System reschedules task. <br/>
 Use Case ends.
 
 **Extensions**
@@ -125,33 +227,35 @@ Use Case ends.
 1a. Incorrect command format.
 
 > 1ai. System displays an error message. <br>
-	Use Case ends.
+  Use Case ends.
 
 1b. User enters an invalid task number.
 
 > 1bi. System displays an error message. <br>
- 	Use Case ends.
- 	
+  Use Case ends.
+  
 1c. User enters an invalid date.
 
 >1ci.  System displays an error message. <br>
- 	Use Case ends.
- 	
-1d. More than 3 dates entered.
+  Use Case ends.
+  
+1d. User enters more than 2 dates.
 
 >1di.  System displays an error message. <br>
- 	Use Case ends.
- 	
-#### Use case: [UC06] Add Reminder to Task
+  Use Case ends.
+
+<br>
+  
+#### Use case: [UC09] Remove Date(s) associated with Task
 
 **Preconditions**
 
-Task exists in system
+Task exists in system.
 
 **MSS**
 
-1. User enters command to edit a task.
-2. System edits task. <br/>
+1. User enters command to clear the date(s) associated with a task.
+2. System removes the date. <br/>
 Use Case ends.
 
 **Extensions**
@@ -159,28 +263,86 @@ Use Case ends.
 1a. Incorrect command format.
 
 > 1ai. System displays an error message. <br>
-	Use Case ends.
+  Use Case ends.
 
 1b. User enters an invalid task number.
 
 > 1bi. System displays an error message. <br>
- 	Use Case ends.
- 	
-1c. User enters an invalid date and time.
+  Use Case ends.
+  
+<br>
 
->1ci.  System displays an error message. <br>
- 	Use Case ends. 
-	
-#### Use case: [UC07] Remove Single Task
+#### Use case: [UC10] Set Reminder for Task
 
 **Preconditions**
 
-Task exists in system
+Task exists in system.
+
+**MSS**
+
+1. User enters command to set reminder for task.
+2. System sets the reminder for task. <br/>
+Use Case ends.
+
+**Extensions**
+
+1a. Incorrect command format.
+
+> 1ai. System displays an error message. <br>
+  Use Case ends.
+
+1b. User enters an invalid task number.
+
+> 1bi. System displays an error message. <br>
+  Use Case ends.
+  
+1c. User enters an invalid date and time.
+
+>1ci.  System displays an error message. <br>
+  Use Case ends. 
+  
+1d. User enters a reminder date after the end date of the current task.
+>1ci.  System displays an error message. <br>
+  Use Case ends. 
+  
+<br>
+
+#### Use case: [UC11] Remove Reminder for Task
+
+**Preconditions**
+
+Task exists in system.
+
+**MSS**
+
+1. User enters command to remove reminder for task.
+2. System removes the reminder for task. <br/>
+Use Case ends.
+
+**Extensions**
+
+1a. Incorrect command format.
+
+> 1ai. System displays an error message. <br>
+  Use Case ends.
+
+1b. User enters an invalid task number.
+
+> 1bi. System displays an error message. <br>
+  Use Case ends.
+  
+<br>
+  
+#### Use case: [UC12] Remove Single Task
+
+**Preconditions**
+
+Task exists in system.
 
 **MSS**
 
 1. User enters command to remove a task.
-2. System edits task. <br/>
+2. System removes task. <br/>
 Use Case ends.
 
 **Extensions**
@@ -195,28 +357,45 @@ Use Case ends.
 > 1bi. System displays an error message. <br>
   Use Case ends.
 
-#### Use case: [UC08] Remove All Tasks
+<br>
+
+#### Use case: [UC13] Remove Multiple Tasks
+
+**Preconditions**
+
+Task exists in system.
 
 **MSS**
 
-1. User enters command to remove all tasks.
-2. System requests to confirm command. 
-3. User confirms request. 
-4. System removes all tasks. <br/>
+1. User enters command to remove multiple tasks.
+2. System removes multiple tasks. <br/>
 Use Case ends.
 
 **Extensions**
 
-1a. There are no pending tasks.
+1a. Incorrect command format.
 
-> 1ai. System displays "No Pending Tasks" message. <br>
+> 1ai. System displays an error message. <br>
   Use Case ends.
 
-3a. User cancels request.
+1b. User enters an invalid task number.
 
-> Use Case ends.
+> 1bi. System displays an error message. <br>
+  Use Case ends.
 
-#### Use case: [UC09] Mark Task as Done
+<br>
+
+#### Use case: [UC14] Clear All Tasks
+
+**MSS**
+
+1. User enters command to clear all tasks.
+2. System clears all tasks. <br/>
+Use Case ends.
+
+<br>
+
+#### Use case: [UC15] Mark Task as Done
 
 **Preconditions**
 
@@ -240,8 +419,9 @@ Use Case ends.
 > 1bi. System displays an error message. <br>
   Use Case ends.
     
+<br>
 
-#### Use case: [UC10] Find Task
+#### Use case: [UC16] Find Task
 
 **Preconditions**
 
@@ -264,7 +444,30 @@ Use Case ends.
 
 > Use Case ends.
 
-#### Use case: [UC11] Undo Command
+<br>
+
+#### Use case: [UC17] List Tasks
+
+**MSS**
+
+1. User enters command to list all tasks.
+2. System displays list of pending and overdue tasks by default unless otherwise stated by the User. <br/>
+Use Case ends.
+
+**Extensions**
+
+1a. Incorrect command format.
+
+> 1ai. System displays an error message. <br>
+  Use Case ends.
+
+1b. No task available.
+
+> Use Case ends.
+
+<br>
+
+#### Use case: [UC18] Undo Command
 
 **MSS**
 
@@ -279,23 +482,42 @@ Use Case ends.
 > 1ai. System displays "Nothing to Undo" message. <br>
   Use Case ends.
 
-#### Use case: [UC12] View Help
+<br>
+
+#### Use case: [UC19] Redo Command
+
+**MSS**
+
+1. User enters redo command.
+2. System redo previous command. <br/>
+Use Case ends.
+
+**Extensions**
+
+1a. No commands to redo.
+
+> 1ai. System displays "Nothing to Redo" message. <br>
+  Use Case ends.
+
+<br>
+
+#### Use case: [UC20] View Help
 
 **MSS**
 
 1. User enters help command.
 2. System displays list of commands available. <br/>
 Use Case ends.
+
+<br>
 	
-#### Use case: [UC13] Change Storage File Location
+#### Use case: [UC21] Change Save Directory
 
 **MSS**
 
-1. User requests to change file directory.
-2. System requests for confirmation.
-3. User confirms request.
-4. User chooses file directory.
-5. System updates file directory. <br/>
+1. User requests to change save directory.
+2. User chooses save directory.
+3. System updates save directory. <br/>
 Use Case ends.
 
 **Extensions**
@@ -304,15 +526,30 @@ Use Case ends.
 
 > Use Case ends.
 
-#### Use case: [UC14] Switch storage file
+2a. Requested directory is invalid or does not exist.
+
+> 2ai. System displays error message. <br>
+  Use Case ends.
+
+2b. Requested directory is the same as current directory.
+
+> 2bi. System displays "Requested directory is the same as current" message. <br>
+  Use Case ends.
+
+2c. File with the same name as currently opened file exists in requested directory.
+
+> 2ci. System displays "Existing file found in requested directory" message. <br>
+  Use Case ends.
+
+<br>
+
+#### Use case: [UC22] Open Storage File
 
 **MSS**
 
-1. User requests to switch storage file.
-2. System requests for confirmation.
-3. User confirms request.
-4. User chooses file to switch to.
-5. System updates storage file. <br/>
+1. User requests to open a storage file.
+2. User chooses file to open.
+3. System updates storage file. <br/>
 Use Case ends.
 
 **Extensions**
@@ -320,100 +557,149 @@ Use Case ends.
 1a. User cancels request.
 
 > Use Case ends.
+
+2a. Requested file is invalid or does not exist.
+
+> 2ai. System displays error message. <br>
+  Use Case ends.
+
+2b. Requested file is currently viewed.
+
+> 2bi. System displays "You are already viewing the requested file" message. <br>
+  Use Case ends.
 
 ```
 ###### \DeveloperGuide.md
 ``` md
 
+<br>
+
+## Appendix D : Glossary
+
+##### Floating Task
+
+> A stand-alone task that does not need to be completed by a certain date or time.
+
+##### Deadline Task
+
+> A task that has to be completed before a certain date or time.
+
+##### Event Task
+
+> A task that occurs over a period of time.
+
+##### Human-Editable File
+
+> A file that can be easily read and edited by a human. For example: `.txt`
+
+##### "Completed" Task
+
+> A task that has been marked as done.
+
+##### "Overdue" Task
+
+> A task that has not been completed within the expected time.
+
+##### "Pending" Task
+
+> A task that has yet to be completed.
+
+##### Storage File Location
+
+> The directory in a computer where the application stores the data of to-do items.
+
+<br>
+
+## Appendix E : Product Survey
+
+The team has conducted a survey on existing products and analysed the strengths and weaknesses with respect to how well it can cater to our target audience.
+
 **Product #1: Wunderlist**<br>
 Strengths:
 
-1. Supports adding of floating tasks and deadlines → One-shot approach for Jim (floating tasks)
-2. Supports editing and deleting of existing tasks → Jim is able to reschedule and discard to-do items that cannot be completed
-3. Supports adding of deadlines and reminders → Reminder available for Jim whenever a deadline is approaching
-4. Supports searching and sorting of to-do items → Ease of finding specific to-do items
-5. Displays to-do items in a user-friendly manner
-6. Able to work offline → Jim does not have to depend on Internet access
-7. Able to view tasks that are completed → Jim is able to know what tasks are completed and yet to be completed
+1. Supports adding of floating tasks and deadlines. User’s one-shot approach is met when adding floating tasks.
+2. Supports editing and deleting of existing tasks. User is able to not only reschedule, but also discard tasks that cannot be completed.
+3. Supports adding of deadlines and reminders. User will be reminded when a deadline is approaching.
+4. Supports searching and sorting of to-do items. User is able to find specific tasks easily.
+5. Supports viewing of tasks that are completed. User is able to know which tasks are completed and which are yet to be completed. 
+6. Supports offline work. User does not have to depend on Internet connectivity to use application.
+7. Displays tasks in a user-friendly manner.
 
-Weakness:
+Weaknesses:
 
-1. Does not work with time slots → Jim is not able to add events
-2. Does not categorise to-do types (Events, Deadlines, Floating Tasks)
-3. Requires a few clicks to perform functions other than adding a task → Jim's one-shot approach is not fulfilled
-4. Does not support an "Undo" option → Incorrect to-do item created has to be edited/deleted instead
-5. Does not store data into local storage files. Links with user account (online) instead → Online access still required to transfer data if Jim works with different computers
+1. Does not work with time slots. User is not able to manage events.
+2. Does not categorise tasks. User may find it hard to differentiate floating tasks from deadlines.
+3. Does not support an "Undo" option. Tasks that were incorrectly added has to be edited or deleted manually.
+4. Does not store data into local storage files but links to an online user account instead. Internet connectivity is still dependent if user wants to work from different computers.
+5. Requires a few clicks to perform functions other than adding a floating task. User’s one-shot approach is not met.
 
 <br>
 
 ```
 ###### \UserGuide.md
 ``` md
-### Edit a Task : `edit; reschedule; remind`
-Edits an existing task in Taskle. There are 3 types of edits possible: Edit task name, Reschedule and Remind. You are required to input the **task_number** (as indicated in Figure 3) in order for Taskle to identify which task you wish to edit.<br><br>
+### Edit a Task: `rename; reschedule; remind`
+Edits an existing task in Taskle. There are three types of possible edits: Rename, Reschedule and Remind. You are required to input the **task_number** (as indicated in the ID column of Figure 3) in order for Taskle to identify the task that you wish to edit.<br><br>
 
-Type | Format  
-:-------- | :-------- 
-Edit task name | `edit `**`task_number new_task_name`**  
-Reschedule | `reschedule `**`task_number date`**`[`**`time`**`] to ` **`date`**`[`**`time`**`] [remind `**`date time`**`]`
-Remind | `remind `**`task_number date`**`[`**` time`**`]`
+|Type      | Format  |
+|:-------- |:--------|
+|Rename    | `rename` **`task_number`** **`new_task_name`** |
+|Reschedule| `reschedule` **`task_number`** `date` [**`time`**] [**`to` `date time`**] |
+|Remind    | `remind` **`task_number`** `date` [**`time`**] |
 
 > **Things to Note**
-> * A  task can only have one reminder. The date and time as specified in the "remind" command would replace any existing reminder.
-> * If **Time** is not specified for reminders, Taskle will automatically assign the reminder time as 00:00 for the specified reminder date.
-> * To remove a reminder or deadline from a task, you will have to type **"clear"** after typing the task number. For example:
->	* remind **2 clear**
->	* reschedule **2 clear**
-
+> * A  task can only have **one reminder**. The date and time that were specified in the "remind" command will replace any existing reminder.
+> * If **no time** was specified for the reminder, Taskle will automatically assign 00:00 of the specified reminder date to it.
+> * To remove a reminder or deadline / event date from a task, you will have to type **"clear"** after typing the task number. For example:
+>  * remind 2 **clear**
+>  * reschedule 2 **clear**
 
 Examples:
-* `edit `**`6 Pay Abel for Chicken Rice`**
+* `rename` **`8 Pay Abel for Chicken Rice`**
+
+<img align="center" src="images/UI/Rename_Before.png">
+<div align="center">Figure 3: Renames Task 8 to "Pay Abel for Chicken Rice" (Before)</div><br>
+
+<img align="center" src="images/UI/Rename_After.png">
+<div align="center">Figure 4: Renames Task 8 to "Pay Abel for Chicken Rice" (After)</div><br>
+
+* `reschedule` **`2 9th November 2pm`**
+
+<img align="center" src="images/UI/Reschedule_Before.png">
+<div align="center">Figure 5: Reschedules Task 2 to "9th November 2pm" (Before)</div><br>
+
+<img align="center" src="images/UI/Reschedule_After.png">
+<div align="center">Figure 6: Reschedules Task 2 to "9th November 2pm" (After)</div><br>
+
+* `remind` **`2 8th November 7pm`**
+   
+<img src="images/UI/Remind_Before.png" align="center">
+<div align="center">Figure 7: Sets a Reminder for Task 2 on "8th November 7pm" (Before)</div><br>
+
+<img src="images/UI/Remind_After.png" align="center"> 
+<div align="center">Figure 8: Sets a Reminder for Task 2 on "8th November 7pm" (After)</div><br>
+
 <br>
-
-<img align="center" src="images/UI/Edit.png">
-<div align="center">Figure 3: Edit Task 6 to Pay Abel for Chicken Rice (Before)</div><br><br>
-
-<img align="center" src="images/UI/Edit 2.png">
-<div align="center">Figure 4: Edit Task 6 to Pay Abel for Chicken Rice (After)</div><br><br>
-
-* `reschedule `**`2`**` to `**`7th October 7pm`**` remind `**`6th October 7pm`**
-
-<img align="center" src="images/UI/Reschedule.png">
-<div align="center">Figure 5: Reschedule Task 2 to 7th October 7pm and set the reminder as 6th October 7pm (Before)</div><br><br>
-
-<img align="center" src="images/UI/Reschedule 2.png">
-<div align="center">Figure 6: Reschedule Task 2 to 7th October 7pm and set the reminder as 6th October 7pm (After)</div><br><br>
-
-
-* `remind `**`2 clear`**
-	
-<img src="images/UI/Remind.png" align="center">
-<div align="center">Figure 7: Clear away the reminder for Task 2 (Before)</div><br><br>
-
-<img src="images/UI/Remind 2.png" align="center">	
-<div align="center">Figure 8: Clear away the reminder for Task 2 (After)</div><br>
 
 ```
 ###### \UserGuide.md
 ``` md
-### Listing tasks: `list`
-Lists tasks according to specified statuses. Use this command to view your tasks
-according to whether they are done, overdue or pending. <br>
+### List Tasks: `list`
+Lists tasks according to specified statuses (done, overdue, or pending).<br><br>
 
 | Format  
 | :-------- 
 | `list` **`[-status]`**| 
 
 > **Things to Note**
-> * The following statues are available:
->	* **-all**: All tasks in Taskle
->	* **-pending**: Tasks that are still pending.
->	* **-done**: Tasks that are marked as done.
->	* **-overdue**: Tasks that are overdue (applicable for deadlines only.)
-> * It is optional to specify the status. If no status is specified, the default
-tasks to be displayed are the pending and overdue ones. (Done tasks are not shown).
-> * You may specify more than one status. In that case all tasks that fulfill any of the flags would be displayed. For example:
->	* list **-pending** **-overdue**
+> * The following statuses are available:
+>  * **-all**: All the tasks in Taskle.
+>  * **-pending**: Pending tasks.
+>  * **-done**: Tasks that have been marked as done.
+>  * **-overdue**: Tasks that are overdue (only applicable to deadlines.)
+> * It is optional to specify the status. If no status was specified, the default tasks (pending and overdue) will be displayed. 
+> * You may specify more than one status. All tasks that fulfill any of these statuses will be displayed. 
+>  * Example:  "`list` **`-pending`** **`-overdue`**"
 
 Example:
 * `list` **`-all`**
@@ -423,8 +709,8 @@ Example:
 ```
 ###### \UserGuide.md
 ``` md
-### Undoing a Recent Command: `undo`
-Undo a previous command. This command is used when you wish to revert from the most recently issued command.<br><br>
+### Undo a Recent Command: `undo`
+Undoes a previous command. It can be called multiple times to return Taskle to a previous state.<br><br>
 
 | Format  
 | :-------- 
@@ -432,12 +718,51 @@ Undo a previous command. This command is used when you wish to revert from the m
 
 <br>
 
-### Redoing a Undo: `redo`
-Redo a previous command. This command is used when you wish to revert a wrongly issued undo command<br><br>
+### Redo a Undo: `redo`
+Redoes a previous command. This command is used when you wish to revert a wrongly issued undo command.<br><br>
 
 | Format  
 | :-------- 
 | `redo` | 
+
+<br>
+
+```
+###### \UserGuide.md
+``` md
+### Change Save Directory: `save`
+Changes the save directory of Taskle's data file.<br><br>
+
+| Format  
+| :-------- 
+| `save` **`directory_path`**|
+
+> **Thing to Note**
+> * You are also able to change your save directory from the menu option.
+
+Example:
+* `save` **`C:\Users\W14-C3\Dropbox`**
+
+<img src="images/UI/Save.png" align="center">
+<div align="center">Figure 13: Changes the Save Directory of Taskle's data file</div><br>
+
+<br>
+ 
+### Open Data File: `open`
+Opens a Taskle data file.<br><br>
+
+| Format  
+| :-------- 
+| `open` **`file_path`**|
+
+> **Thing to Note**
+> * You are also able to open your file from the menu option.
+
+Example:
+* `open` **`C:\Users\W14-C3\Dropbox\Taskle.xml`**
+
+<img src="images/UI/Open.png" align="center">
+<div align="center">Figure 14: Opens a Taskle data file</div><br>
 
 <br>
 
